--- a/templates/Exam/editExamTutor.html
+++ b/templates/Exam/editExamTutor.html
@@ -34,17 +34,19 @@
       <div class="mx-2 row">
         <div class="col">
           <label for="validationCustom01"><strong>Select Class <span class="red">*</span></strong></label>
-          <select id="class_select" name="class" style="width: 100%;" class="js-example-basic-single form-control"onchange="addoptions(this)">
-            <option class="form-control" selected disabled value="{{exam.forclass}}">{{exam.forclass}}</option>
-            {% for x,y in data.items %}
-            <option value="{{ x }}">{{ x }}</option>
+          <select name="class" style="width: 100%;" class="cn js-example-basic-single form-control" onchange="addoptions(this)" required>
+            <option class="form-control" selected value="{{exam.forclass}}">{{exam.forclass}}</option>
+            {% for class in classes %}
+            {% if class != exam.forclass %}
+            <option class="form-control" value="{{class}}">{{class}}</option>
+            {% endif %}
             {% endfor %}
           </select>
         </div>
         <div class="col">
           <label for="validationCustom01"><strong>Select Course<span class="red">*</span></strong></label>
-          <select id="cn" name="course" style="width: 100%" class="js-example-basic-single form-control">
-            <option class="form-control" selected disabled value="{{exam.courseName}}">{{exam.courseName}}</option>
+          <select name="course" style="width: 100%" class="ctn js-example-basic-single form-control" required>
+            <option class="form-control" selected value="{{exam.courseName}}">{{exam.courseName}}</option>
           </select>
         </div>
         <div class="col">
@@ -55,18 +57,18 @@
       <div class="mx-2 row mt-4">
         <div class="col">
           <label for="validationCustom01"><strong>Exam Name <span class="red">*</span></strong></label>
-          <input type="text" class="form-control" placeholder="Exam name" name="examname" value="{{exam.Name}}">
+          <input type="text" class="form-control" placeholder="Exam name" name="examname" value="{{exam.Name}}" required>
         </div>
         <div class="col">
           <label for="validationCustom01"><strong>Exam Date <span class="red"></span></strong></label>
-          <input class="form-control" type="date" placeholder="" name="date" value="{{exam.exam_date|date:'Y-m-d'}}" /><br />
+          <input class="form-control" type="date" placeholder="" name="date" value="{{exam.exam_date|date:'Y-m-d'}}" required/><br />
           <div class="invalid-feedback">
             Select a valid Date!
           </div>
         </div>
         <div class="col">
           <label for="validationCustom01"><strong>Exam Time <span class="red"></span></strong></label>
-          <input class="form-control" type="time" placeholder="" name="exam_time" value="{{exam.exam_time|date:'H:i'}}" /><br />
+          <input class="form-control" type="time" placeholder="" name="exam_time" value="{{exam.exam_time|date:'H:i'}}" required/><br />
           <div class="invalid-feedback">
             Select a valid Time!
           </div>
@@ -79,13 +81,13 @@
         </div>
         <div class="col-md-4 mb-3">
           <label for="validationCustom01"><strong>Exam Duration(In Minute) <span class="red"></span></strong></label>
-          <input class="form-control" type="number" placeholder="00" name="duration" value="{{exam.exam_duration}}" />
+          <input class="form-control" type="number" placeholder="00" name="duration" value="{{exam.exam_duration}}" required/>
           <div class="invalid-feedback">
             Enter a valid value!
           </div>
         </div>
         <div class="col-md-4 mb-3 ">
-          <label for="validationCustom01"><strong>Passing Percentage <span class="red"></span></strong></label>
+          <label for="validationCustom01"><strong>Passing Percentage</strong></label>
           <input class="form-control" type="number" placeholder="00" name="pp" value="{{exam.pass_percentage}}" />
           <div class="invalid-feedback">
             Enter a valid value!
@@ -93,23 +95,23 @@
         </div>
       </div>
       <div class="mx-2 row">
-        <div class="col-md-4 mb-3 ">
+        <!-- <div class="col-md-4 mb-3 ">
           <label for="validationCustom01"><strong>No of Questions <span class="red"></span></strong></label>
           <input class="form-control" type="number" placeholder="0" name="noquestions"
             value="{{exam.question_count}}" />
           <div class="invalid-feedback">
             Enter a valid value!
           </div>
-        </div>
+        </div> -->
         <div class="col-md-4">
-          <label for="validationCustom01"><strong>Exam Status <span class="red"></span></strong></label>
+          <label for="validationCustom01"><strong>Exam Status</strong></label>
           <select class="form-control" id="exampleFormControlSelect1" name="status">
             <option {% if exam.status == True %} selected {% endif %} value="1">Activate</option>
             <option {% if exam.status == False %} selected {% endif %} value="0">Deactivate</option>
           </select>
         </div>
         <div class="col-md-4">
-          <label for="validationCustom01"><strong>Re-Exam Date <span class="red"></span></strong></label>
+          <label for="validationCustom01"><strong>Re-Exam Date</strong></label>
           <input class="form-control" type="date" placeholder="" value="{{exam.reexam_date|date:'Y-m-d'}}" name="redate" /><br />
           <div class="invalid-feedback">
             Select a valid Date!
@@ -157,6 +159,14 @@
             </label>
           </div>
         </div>
+        <div class="form-group">
+          <label class="control-label col-sm-4"><span class="text-danger">Note :</span></label>
+          <div class="col-md-12">
+              <span class="text-muted">
+                After checking Negative Marks option you will be able to create only Multiple Choice and True or False Questions with the same negative marking provided here.
+              </span>
+          </div>
+      </div>
       </div>
       <div class="text-center">
       <button type="submit" class="btn btn-primary"> Save </button>
@@ -165,15 +175,6 @@
   </div>
 
   <script>
-    function addoptions(el) {
-      var data = JSON.parse("{{ data|escapejs }}".replaceAll("'", "\""));
-        var items = data[el.value];
-        html1 = "";
-        for (i = 0; i < items.length; i++) {
-            html1 += "<option value=\"" + items[i] + "\">" + items[i] + "</option> ";
-        }
-        $("#cn").html(html1);
-    };
 
     function checkbox() {
       var value = $("#negativecheck").is(":checked");
@@ -185,6 +186,7 @@
       class="mt-2 form-control"
       placeholder="Enter Negative Marks"
       name="negative_marks"
+      min="0"
       {% if exam.negative_marks %}
       value="{{exam.negative_marks|floatformat}}"
       {% else %}
@@ -206,28 +208,29 @@
       $('.js-example-basic-single').select2();
     });
 
-    $("#select_course").change(function () {
-      var selected = $(this).val();
-      $.ajax({
-        url: "{% url 'classes' %}",
-        data: {
-          course_id: selected,
-        },
-        success: function (data) {
-          categories = data.sub_categories;
-          $("#class_select").empty().trigger("change");
-          for (i = 0; i < categories.length; i++) {
+    function addoptions(el) {
+        var data = {{ data| safe }};
+        courses = data[el.value];
+
+        $(".ctn").empty().trigger("change");
+        var newOption = new Option(
+            "Select Course",
+            "",
+            false,
+            false
+        );
+        $(".ctn").append(newOption).trigger("change");
+
+        for (i = 0; i < courses.length; i++) {
             var newOption = new Option(
-              categories[i].text,
-              categories[i].value,
-              false,
-              false
+                courses[i],
+                courses[i],
+                false,
+                false
             );
-            $("#class_select").append(newOption).trigger("change");
-          }
-        },
-      });
-    });
+            $(".ctn").append(newOption).trigger("change");
+        }
+    }
   </script>
 
 </div>
