--- a/templates/Exam/viewExamsTutor.html
+++ b/templates/Exam/viewExamsTutor.html
@@ -22,15 +22,15 @@
                         </div>
                     </div>
                 </div>
-                {% if exams or tutotexams %}
-                {% if exams %}
+                {% if size or tutorsize %}
                 <div class="widget-content widget-content-area">
                     <div class="table-responsive">
-                    <div class="col-lg-12 col-sm-12 mb-3">
+                        {% if size %}
+                        <div class="col-lg-12 col-sm-12 mb-3">
                     <label class="form-check-label" for="defaultCheck1">
                         Exam For Institute
-                    </label></div>
-                     <form action="" method="post">{% csrf_token %}
+                        </label></div>
+                        <form action="" method="post">{% csrf_token %}
                         <table id="htmlgrid" class="testgrid table table-striped table-bordered table-hover mb-4">
                             <tr>
                                 <th>#</th>
@@ -42,10 +42,11 @@
                                 <th>Total No. of Questions</th>
                                 <th>Pass Percentage</th>
                                 <th class="text-center">Exam status</th>
-                                <th class="text-center" colspan="4">Action</th>
+                                <th class="text-center" colspan="2">Action</th>
+                                <th class="text-center">Add Questions</th>
+                                <th class="text-center">Edit Questions</th>
                             </tr>
-                            {% for exam in exams %}
-                            {% for i in exam %}
+                            {% for i,j in exams %}
                             <tr>
                                 <td>{{forloop.counter}}</td>
                                 <td>{{i.Name}}</td>
@@ -60,19 +61,27 @@
                                 {% else %}
                                 <td class="text-center"><a href="{% url 'toggle' i.id %}" class="btn btn-info p-1">Activate</a></td>
                                 {% endif %}
-                                <td>
-                                    <a class="btn btn-warning" href="{% url 'EditExam' i.id %}"><i class="flaticon-pencil-line" style="font-size:medium;"></i></a>
+                                <td class="text-center" {% if j %} title="Cannot Edit Exam When Live" {% endif %}>
+                                    <a class="btn btn-warning {% if j %} disabled" aria-disabled="true" {% else %} " {% endif %} href="{% url 'EditExam' i.id %}"><i
+                                            class="flaticon-pencil-line" style="font-size:medium;"></i></a>
                                 </td>
-                                <td>
-                                    <a class="btn btn-danger" href="{% url 'DeleteExam' i.id %}"><i class="flaticon-delete-fill" style="font-size:medium;"></i></a>
+                                <td class="text-center" {% if j %} title="Cannot Delete Exam When Live" {% endif %} >
+                                    <a class="btn btn-danger {% if j %} disabled" aria-disabled="true" {% else %} " {% endif %} href="{% url 'DeleteExam' i.id %}"><i
+                                            class="flaticon-delete-fill" style="font-size:medium;"></i></a>
+                                </td>
+                                <td class="text-center" {% if j %} title="Cannot Add Questions When Exam is Live" {% endif %} >
+                                    <a href="{% url 'questions' i.id %}" class="btn btn-info p-1 {% if j %} disabled" aria-disabled="true" {% else %} " {% endif %} >Add Questions</a>
+                                </td>
+                                <td class="text-center" {% if j %} title="Cannot Edit Questions When Exam is Live" {% endif %} >
+                                    <a class="btn btn-info p-1 {% if j %} disabled" aria-disabled="true" {% else %} " {% endif %} href="{% url 'editquestions' i.id %}">Edit Questions</a>
                                 </td>
                             </tr>
-                            {% endfor %}{% endfor %}
+                            {% endfor %}
                         </table>
                         </form>
                         <br>
                         {% endif %}
-                        {% if tutorexams %}
+                        {% if tutorsize %}
                         <div class="col-lg-12 col-sm-12 mb-3">
                         <label class="form-check-label" for="defaultCheck1">
                             Exam For Sell
@@ -89,9 +98,11 @@
                                 <th>Total No. of Questions</th>
                                 <th>Pass Percentage</th>
                                 <th class="text-center">Exam status</th>
-                                <th class="text-center" colspan="4">Action</th>
+                                <th class="text-center" colspan="2">Action</th>
+                                <th class="text-center">Add Questions</th>
+                                <th class="text-center">Edit Questions</th>
                             </tr>
-                            {% for i in tutorexams %}
+                            {% for i,j in tutorexams %}
                             <tr>
                                 <td>{{forloop.counter}}</td>
                                 <td>{{i.Name}}</td>
@@ -106,11 +117,19 @@
                                 {% else %}
                                 <td class="text-center"><a href="{% url 'tutortoggle' i.id %}" class="btn btn-info p-1">Activate</a></td>
                                 {% endif %}
-                                <td>
-                                    <a class="btn btn-warning" href="{% url 'edittutorexams' i.id %}"><i class="flaticon-pencil-line" style="font-size:medium;"></i></a>
+                                <td class="text-center" {% if j %} title="Cannot Edit Exam When Live" {% endif %}>
+                                    <a class="btn btn-warning {% if j %} disabled" aria-disabled="true" {% else %} " {% endif %} href="{% url 'edittutorexams' i.id %}"><i
+                                            class="flaticon-pencil-line" style="font-size:medium;"></i></a>
                                 </td>
-                                <td>
-                                    <a class="btn btn-danger" href="{% url 'DeleteTutorExam' i.id %}"><i class="flaticon-delete-fill" style="font-size:medium;"></i></a>
+                                <td class="text-center" {% if j %} title="Cannot Delete Exam When Live" {% endif %} >
+                                    <a class="btn btn-danger {% if j %} disabled" aria-disabled="true" {% else %} " {% endif %} href="{% url 'DeleteTutorExam' i.id %}"><i
+                                            class="flaticon-delete-fill" style="font-size:medium;"></i></a>
+                                </td>
+                                <td class="text-center" {% if j %} title="Cannot Add Questions When Exam is Live" {% endif %} >
+                                    <a href="{% url 'createquestionstutor' i.id %}" class="btn btn-info p-1 {% if j %} disabled" aria-disabled="true" {% else %} " {% endif %} >Add Questions</a>
+                                </td>
+                                <td class="text-center" {% if j %} title="Cannot Edit Questions When Exam is Live" {% endif %} >
+                                    <a class="btn btn-info p-1 {% if j %} disabled" aria-disabled="true" {% else %} " {% endif %} href="{% url 'editquestionstutor' i.id %}">Edit Questions</a>
                                 </td>
                             </tr>
                             {% endfor %}
