--- a/templates/dashboard/signupTutorContinued.html
+++ b/templates/dashboard/signupTutorContinued.html
@@ -322,8 +322,8 @@
                         <div class="form-group">
                           <label class="control-label" for="cn">Class Name</label>
                           <div>
-                            <select id="cn" name="cn" class="custom-select form-control multiselect2"
-                              required="required" multiple onchange="cnCombine(this)">
+                            <select id="cn" name="cn" class="custom-select form-control"
+                              required="required" onchange="cnCombine(this)">
                               <option disabled value>Select an option</option>
                             </select>
                           </div>
