--- a/templates/dashboard/student-dashboard.html
+++ b/templates/dashboard/student-dashboard.html
@@ -37,11 +37,11 @@
 </head>
 
 <body>
-  <div id="eq-loader">
+  <!-- <div id="eq-loader">
     <div class="eq-loader-div">
       <div class="eq-loading dual-loader mx-auto mb-5"></div>
     </div>
-  </div>
+  </div> -->
 
   <!--  BEGIN NAVBAR  -->
   <header class="desktop-nav header navbar fixed-top">
