--- a/templates/tutorials/addTutorialsTutor.html
+++ b/templates/tutorials/addTutorialsTutor.html
@@ -6,7 +6,7 @@
     <div class="alert alert-warning" role="alert">
         <ul class="messages">
             {% for k in messages %}
-            <li style="color: darkred;">{{ k }}</li>
+            <li style="color: rgb(0, 0, 0);">{{ k }}</li>
             {% endfor %}
         </ul>
     </div>
@@ -25,53 +25,65 @@
             <div class="card-body">
                 <form id='submitForm' method='post' action='' enctype='multipart/form-data'>{% csrf_token %}
                     <div class="row">
+                        <div class="col-md-6 col-lg-4 col-12 input-group form-group">
+                            <label class="control-label col-sm-5 col-5 mt-2" style="color:black;">Class<span
+                                    class="text-danger">*</span></label>
+
+                            <select class="cn custom-select form-control" name="forclass" required
+                                onchange="selectclass(this)">
+                                <option disabled selected value="">Select an option</option>
+                                {% for x in classes %}
+                                <option value="{{ x }}">{{ x }}</option>
+                                {% endfor %}
+                            </select>
+                        </div>
 
                         <div class="col-md-6 col-lg-4 col-12 input-group form-group">
-                            <label class="control-label col-sm-4 col-5 mt-2" style=" color: black;">Title<span
+                            <label class="control-label col-sm-5 col-5 mt-2" style="color:black;">Course<span
                                     class="text-danger">*</span></label>
-                            <input type="text" class="form-control w-100  col-sm-8 col-7" id="firstName " name='title'
+
+                            <select class="ctn custom-select form-control" name="course" required>
+                                <option disabled selected value="">Select an option</option>
+                            </select>
+                        </div>
+
+                        <div class="col-md-6 col-lg-4 col-12 input-group form-group">
+                            <label class="control-label col-sm-5 col-5 mt-2" style=" color: black;">Course Title<span
+                                    class="text-danger">*</span></label>
+                            <input type="text" class="form-control" id="firstName " name='title'
                                 placeholder="Course Title" required>
                         </div>
                         <div class="col-md-6 col-lg-4 col-12 input-group form-group">
-                            <label class="control-label col-sm-4 col-5 mt-2" style="color: black;">Time<span
+                            <label class="control-label col-sm-5 col-5 mt-2" style="color: black;">Course Duration<span
                                     class="text-danger">*</span></label>
-                            <select name="duration" class="custom-select form-control w-100 col-sm-8 col-7" required>
-                                <option disabled selected>In Months</option>
-                                <option value="1">1</option>
-                                <option value="2">2</option>
-                                <option value="3">3</option>
-                                <option value="4">4</option>
-                                <option value="5">5</option>
-                                <option value="6">6</option>
-                            </select>
+                            <input type="number" min="0" class="form-control" name='duration' placeholder="In Months" required>
                         </div>
                         <div class="col-lg-4 col-12 col-md-6 input-group form-group">
-                            <label class="control-label col-sm-4 col-5 mt-2" style="color: black;">Fees<span
+                            <label class="control-label col-sm-5 col-5 mt-2" style="color: black;">Course Fees<span
                                     class="text-danger">*</span></label>
-                            <input type="number" step="0.01" style="-moz-appearance: textfield;" min="0"
-                                class="form-control w-100 col-sm-8 col-7" name="fees" placeholder="Course Fees"
-                                required>
+                                    <input type="number" min="0" id="cfees" class="form-control" name='fees' placeholder="Course Fees"
+                                    required="">
                         </div>
-                        <div class="col-md-6 col-lg-4 col-12 input-group form-group">
-                            <label class="control-label col-sm-4 col-5 mt-2" style="color: black;">Discount Type</label>
-                            <select name="unit" class="custom-select form-control w-100 col-sm-8 col-7" required>
+                        <div class="col-lg-4 col-md-6 col-12 input-group form-group">
+                            <label class="control-label col-sm-5 col-5 mt-2" style="color: black;">Discount Type</label>
+                            <select name="unit" class="custom-select form-control" id="unit">
                                 <option selected value="0">In Percentage (%)</option>
                                 <option value="1">In Rupees </option>
                             </select>
                         </div>
                         <div class="col-lg-4 col-md-6 col-12 input-group form-group">
-                            <label class="control-label col-sm-4 col-5 mt-2" style="color: black;">Discount</label>
-                            <input type="number" step="0.01" style="-moz-appearance: textfield;" min="0"
-                                class="form-control w-100 col-sm-8 col-7" name="feeDisc" placeholder="Discount">
+                            <label class="control-label col-sm-5 col-5 mt-2" style="color: black;">Discount</label>
+                            <input type="number" step="0.01" style="-moz-appearance: textfield;" min="0" id="discount"
+                            max="100" class="form-control" name="feeDisc" placeholder="Discount">
                         </div>
                         <div class="col-lg-4 col-md-6 col-12 input-group form-group">
-                            <label class="control-label col-sm-4 col-5 mt-2" style="color: black;">Validity</label>
-                            <input type="date" class="form-control col-sm-8 col-7" name="discValidity">
+                            <label class="control-label col-sm-5 col-5 mt-2" style="color: black;">Validity</label>
+                            <input type="date" class="form-control" name="discValidity" id="validity" disabled>
                         </div>
 
                         <div class="col-md-12 col-lg-12 col-12 input-group form-group">
-                            <textarea class="form-control my-2 w-100" name='description'
-                                placeholder="Description"></textarea>
+                            <textarea class="form-control" name='description'
+                                placeholder="Description" required></textarea>
                         </div>
 
                         <div class="col-lg-12 col-md-12 col-12 text-center">
@@ -82,4 +94,56 @@
         </div>
     </div>
 </div>
+
+<script>
+    $(document).ready(() => {
+        if (performance.navigation.type == 2) {
+            location.reload();
+        }
+    });
+
+    $('#discount').on('change',()=>{
+        if ($('#unit').val()==1){
+            if($('#cfees').val()){
+                $('#discount').prop('max',$('#cfees').val());
+            }
+        }
+
+        if ($('#discount').val()==0){
+            $('#validity').prop('disabled', true);
+            $('#validity').prop('required', false);
+            $('#validity').val(null);
+        }
+        
+        else{
+            $('#validity').prop('disabled', false);
+            $('#validity').prop('required', true);
+        }
+    })
+
+    function selectclass(el) {
+        var data = {{ data| safe }};
+        courses = data[el.value];
+
+        $(".ctn").empty().trigger("change");
+        var newOption = new Option(
+            "Select an option",
+            "",
+            false,
+            false
+        );
+        $(".ctn").append(newOption).trigger("change");
+
+        for (i = 0; i < courses.length; i++) {
+            var newOption = new Option(
+                courses[i],
+                courses[i],
+                false,
+                false
+            );
+            $(".ctn").append(newOption).trigger("change");
+        }
+    }
+    
+</script>
 {% endblock main-content %}
