--- a/templates/Exam/addExam.html
+++ b/templates/Exam/addExam.html
@@ -33,26 +33,25 @@
         <div class="col">
           <label for="validationCustom01"><strong>Select Class <span class="red">*</span></strong></label>
           <select id="class_select" name="class" style="width: 100%;" class="js-example-basic-single form-control"
-            onchange="selectclass()">
+            onchange="selectclass()" required>
             <option class="form-control" selected disabled value="">Select Class</option>
             {% for class in classes %}
-            <option class="form-control form-control-lg" value="{{class.0}}">{{class.0}} </option>
+            <option class="form-control" value="{{class.0}}">{{class.0}} </option>
             {% endfor %}
           </select>
         </div>
         <div class="col">
           <label for="validationCustom01"><strong>Select Course<span class="red">*</span></strong></label>
-          <select id="select_course" name="course" style="width: 100%" class="js-example-basic-single form-control">
-            <option class="form-control form-control-lg" selected disabled value="">Select Course</option>
+          <select id="select_course" name="course" style="width: 100%" class="js-example-basic-single form-control"
+            required onchange="selectcourse(this)">
+            <option class="form-control" selected disabled value="">Select Course</option>
           </select>
         </div>
         <div class="col">
           <label for="validationCustom01"><strong>Select Batch <span class="red">*</span></strong></label>
-          <select id="batch_select" name="batch" style="width: 100%;" class="js-example-basic-single form-control">
+          <select id="batch_select" name="batch" style="width: 100%;" class="js-example-basic-single form-control"
+            required>
             <option class="form-control" selected disabled value="">Select Batch</option>
-            {% for cat in batch %}
-            <option class="form-control" value="{{cat.batchName}}">{{cat.batchName}}</option>
-            {% endfor %}
           </select>
         </div>
 
@@ -91,23 +90,23 @@
           </div>
         </div>
         <div class="col-md-4 mb-3 ">
-          <label for="validationCustom01"><strong>Passing Percentage <span class="red">*</span></strong></label>
-          <input class="form-control" type="number" min="0" placeholder="00" name="pp" required />
+          <label for="validationCustom01"><strong>Passing Percentage </strong></label>
+          <input class="form-control" type="number" min="0" placeholder="00" name="pp" />
           <div class="invalid-feedback">
             Enter a valid value!
           </div>
         </div>
       </div>
       <div class=" mx-2 row">
-        <div class="col-md-4 mb-3 ">
+        <!-- <div class="col-md-4 mb-3 ">
           <label for="validationCustom01"><strong>No of Questions</strong></label>
           <input class="form-control" type="number" min="0" placeholder="0" name="noquestions" />
           <div class="invalid-feedback">
             Enter a valid value!
           </div>
-        </div>
+        </div> -->
         <div class="col-md-4">
-          <label for="validationCustom01"><strong>Exam Status <span class="red">*</span></strong></label>
+          <label for="validationCustom01"><strong>Exam Status</strong></label>
           <select class="form-control" id="exampleFormControlSelect1" name="status">
             <option value="1">Activate</option>
             <option value="0">Deactivate</option>
@@ -159,6 +158,14 @@
             </label>
           </div>
         </div>
+        <div class="form-group">
+          <label class="control-label col-sm-4"><span class="text-danger">Note :</span></label>
+          <div class="col-md-12">
+              <span class="text-muted">
+                After checking Negative Marks option you will be able to create only Multiple Choice and True or False Questions with the same negative marking provided here.
+              </span>
+          </div>
+      </div>
       </div>
       <div class="text-center">
         <button type="submit" class="btn btn-primary"> Save </button>
@@ -177,6 +184,7 @@
       class="mt-2 form-control"
       placeholder="Enter Negative Marks"
       name="negative_marks"
+      min="0"
       value="0"
       required
     />
@@ -188,6 +196,13 @@
       }
       negative.innerHTML = output;
     }
+
+    $(document).ready(() => {
+      if (performance.navigation.type == 2) {
+        location.reload();
+      }
+    });
+
     // In your Javascript (external .js resource or <script> tag)
     $(document).ready(function () {
       $('.js-example-basic-single').select2();
@@ -203,6 +218,13 @@
         success: function (data) {
           courses = data.courses;
           $("#select_course").empty().trigger("change");
+          var newOption = new Option(
+            "Select Course",
+            "",
+            false,
+            false
+          );
+          $("#select_course").append(newOption).trigger("change");
           for (i = 0; i < courses.length; i++) {
             var newOption = new Option(
               courses[i][1],
@@ -216,10 +238,42 @@
       });
     }
 
-    $(window).on('pageshow', () => {
-      var frm = $('#frm');
-      frm[0].reset();
+    function selectcourse(el) {
+    var selected_course = $("#select_course option:selected").text();
+    var selected_class = $("#class_select").val();
+
+    $.ajax({
+      url: "{% url 'findBatch' %}",
+      data: {
+        forclass: selected_class,
+        course: selected_course
+      },
+      success: function (data) {
+        batches = data.batches;
+
+        $("#batch_select").empty().trigger("change");
+
+        var newOption = new Option(
+                    "Select Batch",
+                    "",
+                    false,
+                    false
+                );
+        $("#batch_select").append(newOption).trigger("change");
+
+        for (i = 0; i < batches.length; i++) {
+          var newOption = new Option(
+            batches[i][0],
+            batches[i][0],
+            false,
+            false
+          );
+          $("#batch_select").append(newOption).trigger("change");
+        }
+      },
     });
+  }
+
   </script>
 
 </div>
