--- a/templates/Exam/editExam.html
+++ b/templates/Exam/editExam.html
@@ -28,51 +28,54 @@
   {% endif %}
   <div style="padding-top: 0;" class="class" id="card">
     <div class="card-header">
-    <h2 style="align-items: center;text-align: center;">Edit Exam</h2>
-  </div>
+      <h2 style="align-items: center;text-align: center;">Edit Exam</h2>
+    </div>
     <form class="mt-4" method="post">{% csrf_token %}
       <div class="mx-2 row">
         <div class="col">
           <label for="validationCustom01"><strong>Select Class <span class="red">*</span></strong></label>
-          <select id="class_select" name="class" style="width: 100%;" class="js-example-basic-single form-control" onchange="selectclass()">
-            <option class="form-control" selected disabled value="{{exam.Class}}">{{exam.Class}}</option>
+          <select id="class_select" name="class" style="width: 100%;" class="js-example-basic-single form-control"
+            onchange="selectclass()" required>
+            <option class="form-control" selected value="{{exam.Class}}">{{exam.Class}}</option>
             {% for class in classes %}
+            {% if class.0 != exam.Class %}
             <option class="form-control" value="{{class.0}}">{{class.0}}</option>
+            {% endif %}
             {% endfor %}
           </select>
         </div>
         <div class="col">
           <label for="validationCustom01"><strong>Select Course<span class="red">*</span></strong></label>
-          <select id="select_course" name="course" style="width: 100%" class="js-example-basic-single form-control">
-            <option class="form-control" selected disabled value="{{exam.course.id}}">{{exam.course.courseName}}
+          <select id="select_course" name="course" style="width: 100%" class="js-example-basic-single form-control" onchange="selectcourse(this)" required>
+            <option class="form-control" selected value="{{exam.course.id}}">
+              {{exam.course.courseName}}
             </option>
           </select>
         </div>
         <div class="col">
           <label for="validationCustom01"><strong>Select Batch <span class="red">*</span></strong></label>
-          <select id="batch_select" name="batch" style="width: 100%;" class="js-example-basic-single form-control">
-            <option class="form-control" selected disabled>{{exam.Batch}}</option>
-            {% for cat in batch %}
-            <option class="form-control" value="{{cat.batchName}}">{{cat.batchName}}</option>
-            {% endfor %}
+          <select id="batch_select" name="batch" style="width: 100%;" class="js-example-basic-single form-control" required>
+            <option class="form-control" selected>{{exam.Batch}}</option>
           </select>
         </div>
       </div>
       <div class="mx-2 row mt-4">
         <div class="col">
           <label for="validationCustom01"><strong>Exam Name <span class="red">*</span></strong></label>
-          <input type="text" class="form-control" placeholder="Exam name" name="examname" value="{{exam.Name}}">
+          <input type="text" class="form-control" placeholder="Exam name" name="examname" value="{{exam.Name}}" required>
         </div>
         <div class="col">
           <label for="validationCustom01"><strong>Exam Date <span class="red"></span></strong></label>
-          <input class="form-control" type="date" placeholder="" name="date" value="{{exam.exam_date|date:'Y-m-d'}}" /><br />
+          <input class="form-control" type="date" placeholder="" name="date"
+            value="{{exam.exam_date|date:'Y-m-d'}}" required/><br />
           <div class="invalid-feedback">
             Select a valid Date!
           </div>
         </div>
         <div class="col">
           <label for="validationCustom01"><strong>Exam Time <span class="red"></span></strong></label>
-          <input class="form-control" type="time" placeholder="" name="exam_time" value="{{exam.exam_time|date:'H:i'}}" /><br />
+          <input class="form-control" type="time" placeholder="" name="exam_time"
+            value="{{exam.exam_time|date:'H:i'}}" required /><br />
           <div class="invalid-feedback">
             Select a valid Time!
           </div>
@@ -85,13 +88,13 @@
         </div>
         <div class="col-md-4 mb-3">
           <label for="validationCustom01"><strong>Exam Duration(In Minute) <span class="red"></span></strong></label>
-          <input class="form-control" type="number" placeholder="00" name="duration" value="{{exam.exam_duration}}" />
+          <input class="form-control" type="number" placeholder="00" name="duration" value="{{exam.exam_duration}}" required/>
           <div class="invalid-feedback">
             Enter a valid value!
           </div>
         </div>
         <div class="col-md-4 mb-3 ">
-          <label for="validationCustom01"><strong>Passing Percentage <span class="red"></span></strong></label>
+          <label for="validationCustom01"><strong>Passing Percentage </strong></label>
           <input class="form-control" type="number" placeholder="00" name="pp" value="{{exam.pass_percentage}}" />
           <div class="invalid-feedback">
             Enter a valid value!
@@ -99,24 +102,17 @@
         </div>
       </div>
       <div class="mx-2 row">
-        <div class="col-md-4 mb-3 ">
-          <label for="validationCustom01"><strong>No of Questions <span class="red"></span></strong></label>
-          <input class="form-control" type="number" placeholder="0" name="noquestions"
-            value="{{exam.question_count}}" />
-          <div class="invalid-feedback">
-            Enter a valid value!
-          </div>
-        </div>
         <div class="col-md-4">
-          <label for="validationCustom01"><strong>Exam Status <span class="red"></span></strong></label>
+          <label for="validationCustom01"><strong>Exam Status </strong></label>
           <select class="form-control" id="exampleFormControlSelect1" name="status">
             <option {% if exam.status == True %} selected {% endif %} value="1">Activate</option>
             <option {% if exam.status == False %} selected {% endif %} value="0">Deactivate</option>
           </select>
         </div>
         <div class="col-md-4">
-          <label for="validationCustom01"><strong>Re-Exam Date <span class="red"></span></strong></label>
-          <input class="form-control" type="date" placeholder="" value="{{exam.reexam_date|date:'Y-m-d'}}" name="redate" /><br />
+          <label for="validationCustom01"><strong>Re-Exam Date </strong></label>
+          <input class="form-control" type="date" placeholder="" value="{{exam.reexam_date|date:'Y-m-d'}}"
+            name="redate" ><br />
           <div class="invalid-feedback">
             Select a valid Date!
           </div>
@@ -134,8 +130,7 @@
       <div class="mx-2 row">
         <div class="col-lg-12 mb-3 ">
           <div class="custom-checkbox custom-control">
-            <input class="form-check-input" type="checkbox" id="defaultCheck1" {% if exam.calculator %} checked {% endif %} name="calculator"
-              value='{{exam.calculator|yesno:"1,0"}}' />
+            <input class="form-check-input" type="checkbox" id="defaultCheck1" {% if exam.calculator %} checked {% endif %} name="calculator" value='{{exam.calculator|yesno:"1,0"}}' />
             <label class="form-check-label" for="defaultCheck1">
               Make Calculator Available
             </label>
@@ -143,8 +138,7 @@
         </div>
         <div class="col-lg-2 col-sm-2 mb-3">
           <div class="custom-checkbox custom-control">
-            <input class="form-check-input" type="checkbox" onchange="checkbox()" id="negativecheck" name="nm" {% if exam.negative_marking %} checked {% endif %}
-              value='{{exam.negative_marking|yesno:"1,0" }}' />
+            <input class="form-check-input" type="checkbox" onchange="checkbox()" id="negativecheck" name="nm" {% if exam.negative_marking %} checked {% endif %} value='{{exam.negative_marking|yesno:"1,0" }}' />
             <label class="form-check-label" for="defaultCheck1">
               Negative Marks
             </label>
@@ -156,26 +150,33 @@
         </div>
         <div class="col-lg-2 col-sm-2 mb-3">
           <div class="custom-checkbox custom-control">
-            <input class="form-check-input" type="checkbox" onchange="" id="uploadimages" {% if exam.imgupload %} checked {% endif %} name="imguplod"
-              value='{{exam.imgupload|yesno:"1,0"}}' />
+            <input class="form-check-input" type="checkbox" onchange="" id="uploadimages" {% if exam.imgupload %} checked {% endif %} name="imguplod" value='{{exam.imgupload|yesno:"1,0"}}' />
             <label class="form-check-label" for="defaultCheck1">
               Upload images
             </label>
           </div>
         </div>
+        <div class="form-group">
+          <label class="control-label col-sm-4"><span class="text-danger">Note :</span></label>
+          <div class="col-md-12">
+              <span class="text-muted">
+                After checking Negative Marks option you will be able to create only Multiple Choice and True or False Questions with the same negative marking provided here.
+              </span>
+          </div>
+      </div>
       </div>
       <div class="text-center">
-      <button type="submit" class="btn btn-primary"> Save </button>
-    </div>
+        <button type="submit" class="btn btn-primary"> Save </button>
+      </div>
     </form>
   </div>
   <script>
     function checkbox() {
-var value = $("#negativecheck").is(":checked");
-negative = document.getElementById("negative");
-var output;
-if (value) {
-  output = `<input
+      var value = $("#negativecheck").is(":checked");
+      negative = document.getElementById("negative");
+      var output;
+      if (value) {
+        output = `<input
   type="number"
   class="mt-2 form-control"
   placeholder="Enter Negative Marks"
@@ -190,41 +191,83 @@ if (value) {
 <div class="invalid-feedback">
   Enter a valid No.
 </div>`;
-} else {
-  output = "";
-}
-negative.innerHTML = output;
-}
-  // In your Javascript (external .js resource or <script> tag)
-$(document).ready(function() {
-  checkbox();
-$('.js-example-basic-single').select2();
-});
+      } else {
+        output = "";
+      }
+      negative.innerHTML = output;
+    }
+    // In your Javascript (external .js resource or <script> tag)
+    $(document).ready(function () {
+      checkbox();
+      $('.js-example-basic-single').select2();
+    });
 
 
-function selectclass() {
-    var selected = $("#class_select").val();
-    $.ajax({
-      url: "{% url 'findCourse' %}",
-      data: {
-        forclass: selected,
-      },
-      success: function (data) {
-        courses = data.courses;
-        console.log(courses)
-        $("#select_course").empty().trigger("change");
-        for (i = 0; i < courses.length; i++) {
+    function selectclass() {
+      var selected = $("#class_select").val();
+      $.ajax({
+        url: "{% url 'findCourse' %}",
+        data: {
+          forclass: selected,
+        },
+        success: function (data) {
+          courses = data.courses;
+          $("#select_course").empty().trigger("change");
           var newOption = new Option(
-            courses[i][1],
-            courses[i][0],
+            "Select Course",
+            "",
             false,
             false
           );
           $("#select_course").append(newOption).trigger("change");
-        }
-      },
-    });
-  }
-</script>
+          for (i = 0; i < courses.length; i++) {
+            var newOption = new Option(
+              courses[i][1],
+              courses[i][0],
+              false,
+              false
+            );
+            $("#select_course").append(newOption).trigger("change");
+          }
+        },
+      });
+    }
+
+    function selectcourse(el) {
+      var selected_course = $("#select_course option:selected").text();
+      var selected_class = $("#class_select").val();
+
+      $.ajax({
+        url: "{% url 'findBatch' %}",
+        data: {
+          forclass: selected_class,
+          course: selected_course
+        },
+        success: function (data) {
+          batches = data.batches;
+
+          $("#batch_select").empty().trigger("change");
+
+          var newOption = new Option(
+            "Batch Name",
+            "",
+            false,
+            false
+          );
+          $("#batch_select").append(newOption).trigger("change");
+
+          for (i = 0; i < batches.length; i++) {
+            var newOption = new Option(
+              batches[i][0],
+              batches[i][0],
+              false,
+              false
+            );
+            $("#batch_select").append(newOption).trigger("change");
+          }
+        },
+      });
+    }
+  </script>
 </div>
 {% endblock main-content %}
