--- a/templates/Exam/editbooleanquestionstutor.html
+++ b/templates/Exam/editbooleanquestionstutor.html
@@ -2,153 +2,154 @@
 {% load static %}
 {% block main-content %}
 <script src="{% static 'js/tinymce/tinymce.min.js' %}"></script>
-<div class="container">
-  {% if errors %}
-  <div class="alert alert-danger" role="alert">
-    <div id='errorsBox'>
-      <div>
-        <h5
-          style="color: red;text-shadow:-0.5px -0.5px 0 #000,0.5px -0.5px 0 #000,-0.5px 0.5px 0 #000,0.5px 0.5px 0 #000;">
-          Error !</h5>
-        <ul>
-          {% for x in errors %}
-          <li>{{ x }}</li>
-          {% endfor %}
-        </ul>
+<div class="mt-5">
+    {% if errors %}
+    <div class="alert alert-danger" role="alert">
+        <div id='errorsBox'>
+            <div>
+                <h5 style="color: red;text-shadow:-0.5px -0.5px 0 #000,0.5px -0.5px 0 #000,-0.5px 0.5px 0 #000,0.5px 0.5px 0 #000;">Error !</h5>
+                <ul>
+                    {% for x in errors %}
+                    <li>{{ x }}</li>
+                    {% endfor %}
+                </ul>
+            </div>
+        </div>
+    </div>
+        {% endif %}
+    <div class="mt-5 card">
+      <div class="row mb-2">
+        <div class="col">
+          <h2 class="text-center">True / False Question Type</h2>
+        </div>
       </div>
+      <hr>
+      <div class="mx-2 row mt-2">
+  <div class="col">
+  <form method="post">{% csrf_token %}
+  <div class="row mt-2">
+    <div class="col">
+        <div class="form-group">
+    <label for="exampleFormControlSelect1">Section</label>
+    <select class="form-control" id="exampleFormControlSelect1" name="section">
+      <option value="A">None Selected</option>
+      <option {% if question.section == "A" %} selected {% endif %} value="A">Section A</option>
+      <option {% if question.section == "B" %} selected {% endif %} value="B">Section B</option>
+      <option {% if question.section == "C" %} selected {% endif %} value="C">Section C</option>
+      <option {% if question.section == "D" %} selected {% endif %} value="D">Section D</option>
+    </select>
+  </div>
+    </div>
+        <div class="col" id="solutionbox">
+  <div class="form-group">
+    <label for="exampleFormControlSelect1">Enter Marks</label>
+<input type="number" class="form-control" placeholder="Enter Marks" name="marks" required value={{question.marks|floatformat}}>
+  </div>
     </div>
   </div>
-  {% endif %}
-  <div class="container card mt-5">
-    <div class="row mb-2">
-      <div class="col">
-        <h2 class="text-center">True / False Question Type</h2>
-      </div>
+  <div class="row">
+    <div class="col">
+        <div class="form-group">
+    <label for="exampleFormControlSelect1">First Option</label>
+<input type="text" class="form-control" placeholder="Enter Option Value" name="option1" required value={{question.option1}}>
+  </div>
     </div>
-    <hr>
-    <div class="row mt-2">
-      <div class="col">
-        <form method="post">{% csrf_token %}
-          <div class="row mt-2">
-            <div class="col">
-              <div class="form-group">
-                <label for="exampleFormControlSelect1">Section</label>
-                <select class="form-control" id="exampleFormControlSelect1" name="section">
-                  <option value="A">None Selected (Default A)</option>
-                  <option value="A">Section A</option>
-                  <option value="B">Section B</option>
-                  <option value="C">Section C</option>
-                  <option value="D">Section D</option>
-                </select>
-              </div>
+    <div class="col">
+        <div class="form-group">
+    <label for="exampleFormControlSelect1">Second Option</label>
+<input type="text" class="form-control" placeholder="Enter Option Value" name="option2" required value={{question.option2}}>
+  </div>
+    </div>    
+  </div>
+  <div class="row">
+    {% if question.exam.negative_marking == False %}
+         <div class="col mb-3">
+            <div class="custom-checkbox custom-control">
+              <input class="form-check-input" type="checkbox" onchange="checkbox()" id="negativecheck" name="nm" {% if question.negative_marks %} checked {% endif %}/>
+              <label class="form-check-label" for="defaultCheck1">
+                Negative Marks
+              </label>
+              <div id="negative"></div>
             </div>
-            <div class="col" id="solutionbox">
-              <div class="form-group">
-                <label for="exampleFormControlSelect1">Enter Marks</label>
-                <input type="number" class="form-control" placeholder="Enter Marks" name="marks" required
-                  value={{question.marks}}>
-              </div>
+            <div class="invalid-feedback">
+              Choose a value
             </div>
           </div>
-          <div class="row">
-            <div class="col">
-              <div class="form-group">
-                <label for="exampleFormControlSelect1">First Option</label>
-                <input type="text" class="form-control" placeholder="Enter Option Value" name="option1" required
-                  value={{question.option1}}>
-              </div>
-            </div>
-            <div class="col">
-              <div class="form-group">
-                <label for="exampleFormControlSelect1">Second Option</label>
-                <input type="text" class="form-control" placeholder="Enter Option Value" name="option2" required
-                  value={{question.option2}}>
-              </div>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col mb-3">
-              <div class="custom-checkbox custom-control">
-                <input class="form-check-input" type="checkbox" onchange="checkbox()" id="negativecheck" name="nm" />
-                <label class="form-check-label" for="defaultCheck1">
-                  Negative Marks
-                </label>
-                <div id="negative"></div>
-              </div>
-              <div class="invalid-feedback">
-                Choose a value
-              </div>
-            </div>
-          </div>
-          <div class="row mt-2">
-            <div class="col">
-              <div class="form-group" id="textarea1">
-                <label for="exampleFormControlTextarea1" style="font-size: 20px;">Question</label>
-                <textarea class="form-control" id="exampleFormControlTextarea1" rows="7" name="question" required>
+      {% endif %}
+  </div>
+      <div class="row mt-2">
+    <div class="col">
+       <div class="form-group" id="textarea1">
+    <label for="exampleFormControlTextarea1" style="font-size: 20px;">Question</label>
+    <textarea class="form-control" id="exampleFormControlTextarea1" rows="7" name="question" required>
     </textarea>
-              </div>
+  </div>
 
-            </div>
-          </div>
+    </div>
+    </div>
           <div class="row">
-            <div class="col">
-              <div class="form-group" id="textarea2">
-                <label for="exampleFormControlTextarea1" style="font-size: 20px;">Solution</label>
-                <textarea class="form-control" id="exampleFormControlTextarea2" rows="7" name="solution" required>
+    <div class="col">
+       <div class="form-group" id="textarea2">
+    <label for="exampleFormControlTextarea1" style="font-size: 20px;">Solution</label>
+    <textarea class="form-control" id="exampleFormControlTextarea2" rows="7" name="solution" required>
     </textarea>
-              </div>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col">
-              <button type="submit" class="btn btn-primary">Save</button>
-            </div>
-          </div>
-        </form>
+  </div>
+    </div>
+    </div>
+    <div class="text-center mb-2">
+      <div class="col">
+        <button type="submit" class="btn btn-primary">Save</button>
       </div>
     </div>
-  </div>
+</form>
+        </div>
+      </div>
+    </div>
 </div>
-<script>
-  tinymce.init({
-    selector: "#exampleFormControlTextarea1",
-    height: 200,
-    theme: "modern",
-    setup: function (editor) {
-      editor.on("init", function (e) {
-        editor.setContent("<p>{{question.question|safe}}</p>");
-      });
-    },
-    plugins: [
-      "advlist autolink lists link image charmap print preview hr anchor pagebreak",
-      "searchreplace wordcount visualblocks visualchars code fullscreen",
-      "insertdatetime media nonbreaking save table contextmenu directionality",
-      "emoticons template paste textcolor colorpicker textpattern imagetools codesample toc FMathEditor",
-    ],
-    toolbar1: "undo redo | insert | styleselect | bold italic | alignleft aligncenter alignright alignjustify | bullist numlist outdent indent | link image",
-    toolbar2: "print preview media | forecolor backcolor emoticons | codesample | FMathEditor",
-  });
+    <script>
+tinymce.init({
+          selector: "#exampleFormControlTextarea1",
+          height: 200,
+          theme: "modern",
+          setup: function (editor) {
+            editor.on("init", function (e) {
+              editor.setContent(`<p>{{question.question|safe}}</p>`);
+            });
+          },
+          plugins: [
+            "advlist autolink lists link image charmap print preview hr anchor pagebreak",
+            "searchreplace wordcount visualblocks visualchars code fullscreen",
+            "insertdatetime media nonbreaking save table contextmenu directionality",
+            "emoticons template paste textcolor colorpicker textpattern imagetools codesample toc FMathEditor",
+          ],
+          toolbar1:
+            "undo redo | insert | styleselect | bold italic | alignleft aligncenter alignright alignjustify | bullist numlist outdent indent | link image",
+          toolbar2:
+            "print preview media | forecolor backcolor emoticons | codesample | FMathEditor",
+        });
 
-  tinymce.init({
-    selector: "#exampleFormControlTextarea2",
-    height: 200,
-    theme: "modern",
-    setup: function (editor) {
-      editor.on("init", function (e) {
-        editor.setContent("<p>{{question.correct_ans|safe}}</p>");
-      });
-    },
-    plugins: [
-      "advlist autolink lists link image charmap print preview hr anchor pagebreak",
-      "searchreplace wordcount visualblocks visualchars code fullscreen",
-      "insertdatetime media nonbreaking save table contextmenu directionality",
-      "emoticons template paste textcolor colorpicker textpattern imagetools codesample toc FMathEditor",
-    ],
-    toolbar1: "undo redo | insert | styleselect | bold italic | alignleft aligncenter alignright alignjustify | bullist numlist outdent indent | link image",
-    toolbar2: "print preview media | forecolor backcolor emoticons | codesample | FMathEditor",
-  });
+tinymce.init({
+          selector: "#exampleFormControlTextarea2",
+          height: 200,
+          theme: "modern",
+          setup: function (editor) {
+            editor.on("init", function (e) {
+              editor.setContent(`<p>{{question.correct_ans|safe}}</p>`);
+            });
+          },
+          plugins: [
+            "advlist autolink lists link image charmap print preview hr anchor pagebreak",
+            "searchreplace wordcount visualblocks visualchars code fullscreen",
+            "insertdatetime media nonbreaking save table contextmenu directionality",
+            "emoticons template paste textcolor colorpicker textpattern imagetools codesample toc FMathEditor",
+          ],
+          toolbar1:
+            "undo redo | insert | styleselect | bold italic | alignleft aligncenter alignright alignjustify | bullist numlist outdent indent | link image",
+          toolbar2:
+            "print preview media | forecolor backcolor emoticons | codesample | FMathEditor",
+        });
 
-  function checkbox() {
+        function checkbox() {
     var value = $("#negativecheck").is(":checked");
     negative = document.getElementById("negative");
     var output;
@@ -158,7 +159,12 @@
       class="mt-2 form-control"
       placeholder="Enter Negative Marks"
       name="negative_marks"
-      value="0"
+      min="0"
+      {% if question.negative_marks %}
+  value="{{question.negative_marks|floatformat}}"
+  {% else %}
+  value="0"
+  {% endif %}
       required
     />
     <div class="invalid-feedback">
@@ -169,11 +175,13 @@
     }
     negative.innerHTML = output;
   }
-  // In your Javascript (external .js resource or <script> tag)
-  $(document).ready(function () {
+      // In your Javascript (external .js resource or <script> tag)
+$(document).ready(function() {
+    checkbox();
     $('.js-example-basic-single').select2();
-  });
-</script>
+});
+
+    </script>
 
 </div>
 {% endblock main-content %}
