--- a/templates/Exam/editmultiplequestions.html
+++ b/templates/Exam/editmultiplequestions.html
@@ -63,6 +63,7 @@
     <a class="btn btn-primary" onclick="addoptions()" style="float: right;">Add Options</a>
   </div>
   <div class="row">
+    {% if question.exam.negative_marking == False %}
          <div class="col mb-3">
             <div class="custom-checkbox custom-control">
               <input class="form-check-input" type="checkbox" onchange="checkbox()" id="negativecheck" name="nm" {% if question.negative_marks %} checked {% endif %} />
@@ -75,6 +76,7 @@
               Choose a value
             </div>
           </div>
+          {% endif %}
   </div>
       <div class="row mt-2">
     <div class="col">
@@ -158,6 +160,7 @@ tinymce.init({
   class="mt-2 form-control"
   placeholder="Enter Negative Marks"
   name="negative_marks"
+  min="0"
   {% if question.negative_marks %}
   value="{{question.negative_marks|floatformat}}"
   {% else %}
@@ -175,6 +178,7 @@ tinymce.init({
   }
       // In your Javascript (external .js resource or <script> tag)
 $(document).ready(function() {
+  checkbox()
     $('.js-example-basic-single').select2();
 });
 
