--- a/templates/Exam/editshortquestionstutor.html
+++ b/templates/Exam/editshortquestionstutor.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% block main-content %}
 <script src="{% static 'js/tinymce/tinymce.min.js' %}"></script>
-<div class="container">
+<div class="mt-5">
   {% if errors %}
   <div class="alert alert-danger" role="alert">
     <div id='errorsBox'>
@@ -19,14 +19,14 @@
     </div>
   </div>
   {% endif %}
-  <div class="container card mt-5">
+  <div class="card mt-5">
     <div class="row mb-2">
       <div class="col">
         <h2 class="text-center">Short Question Type</h2>
       </div>
     </div>
     <hr>
-    <div class="row mt-2">
+    <div class="mx-2 row mt-2">
       <div class="col">
         <form method="post">{% csrf_token %}
           <div class="row mt-2">
@@ -35,10 +35,10 @@
                 <label for="exampleFormControlSelect1">Section</label>
                 <select class="form-control" id="exampleFormControlSelect1" name="section">
                   <option value="A">None Selected</option>
-                  <option value="A">Section A</option>
-                  <option value="B">Section B</option>
-                  <option value="C">Section C</option>
-                  <option value="D">Section D</option>
+                  <option {% if question.section == "A" %} selected {% endif %} value="A">Section A</option>
+                  <option {% if question.section == "B" %} selected {% endif %} value="B">Section B</option>
+                  <option {% if question.section == "C" %} selected {% endif %} value="C">Section C</option>
+                  <option {% if question.section == "D" %} selected {% endif %} value="D">Section D</option>
                 </select>
               </div>
             </div>
@@ -46,14 +46,14 @@
               <div class="form-group">
                 <label for="exampleFormControlSelect1">Enter Marks</label>
                 <input type="number" class="form-control" placeholder="Enter Marks" name="marks" required
-                  value={{question.marks}}>
+                  value={{question.marks|floatformat}}>
               </div>
             </div>
           </div>
           <div class="row">
             <div class="col mb-3">
               <div class="custom-checkbox custom-control">
-                <input class="form-check-input" type="checkbox" onchange="checkbox()" id="negativecheck" name="nm" />
+                <input class="form-check-input" type="checkbox" onchange="checkbox()" id="negativecheck" name="nm" {% if question.negative_marks %} checked {% endif %}/>
                 <label class="form-check-label" for="defaultCheck1">
                   Negative Marks
                 </label>
@@ -69,6 +69,7 @@
               <div class="form-group" id="textarea1">
                 <label for="exampleFormControlTextarea1" style="font-size: 20px;">Question</label>
                 <textarea class="form-control" id="exampleFormControlTextarea1" rows="7" name="question" required>
+
     </textarea>
               </div>
 
@@ -77,13 +78,14 @@
           <div class="row">
             <div class="col">
               <div class="form-group" id="textarea2">
-                <label for="exampleFormControlTextarea1" style="font-size: 20px;">Solution</label>
+                <label for="exampleFormControlTextarea2" style="font-size: 20px;">Solution</label>
                 <textarea class="form-control" id="exampleFormControlTextarea2" rows="7" name="solution" required>
+
     </textarea>
               </div>
             </div>
           </div>
-          <div class="row">
+          <div class="text-center mb-2">
             <div class="col">
               <button type="submit" class="btn btn-primary">Save</button>
             </div>
@@ -94,13 +96,17 @@
   </div>
 </div>
 <script>
+  $(document).ready(function () {
+    checkbox();
+    $('.js-example-basic-single').select2();
+  });
   tinymce.init({
     selector: "#exampleFormControlTextarea1",
     height: 200,
     theme: "modern",
     setup: function (editor) {
       editor.on("init", function (e) {
-        editor.setContent("<p>{{question.question|safe}}</p>");
+        editor.setContent(`<p>{{question.question|safe}}</p>`);
       });
     },
     plugins: [
@@ -119,7 +125,7 @@
     theme: "modern",
     setup: function (editor) {
       editor.on("init", function (e) {
-        editor.setContent("<p>{{question.correct_ans|safe}}</p>");
+        editor.setContent(`<p>{{question.correct_ans|safe}}</p>`);
       });
     },
     plugins: [
@@ -142,7 +148,12 @@
       class="mt-2 form-control"
       placeholder="Enter Negative Marks"
       name="negative_marks"
-      value="0"
+      min="0"
+      {% if question.negative_marks %}
+  value="{{question.negative_marks|floatformat}}"
+  {% else %}
+  value="0"
+  {% endif %}
       required
     />
     <div class="invalid-feedback">
@@ -154,9 +165,6 @@
     negative.innerHTML = output;
   }
   // In your Javascript (external .js resource or <script> tag)
-  $(document).ready(function () {
-    $('.js-example-basic-single').select2();
-  });
 </script>
 
 </div>
