--- a/templates/Notes/addNotesInstitute.html
+++ b/templates/Notes/addNotesInstitute.html
@@ -304,7 +304,17 @@
 
 {% endblock %}
 {% block main-content %}
-<div class="mt-5 row">
+<div class="mt-5">
+    {% if messages %}
+    {% for k in messages%}
+    <div class="alert alert-{{k.tags}} alert-dismissible fade show" role="alert">
+        <b>{{ k }} !</b>
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
+    {% endfor %}
+    {% endif %}
     <div class="d-flex justify-content-center h-100">
         <div class="card" style="width: 100%;">
             <div class="card-header">
@@ -319,17 +329,12 @@
                     {% csrf_token %}
                     <div class="row">
                         <div class="col-md-6 col-lg-5 col-12 input-group form-group">
-                            <label class="control-label col-sm-5 col-5 mt-2" style="color:black;">Note Title<span
-                                    class="text-danger">*</span></label>
-                            <input type="text" class="form-control" name='title' placeholder="Note Title" required="">
-                        </div>
-                        <div class="col-md-6 col-lg-5 col-12 input-group form-group">
                             <label class="control-label col-sm-5 col-5 mt-2" style="color:black;">Select Class<span
-                                class="text-danger">*</span></label>
+                                    class="text-danger">*</span></label>
 
                             <select class="form-control" id="class_select" name="forclass" onchange="selectclass()"
                                 required>
-                                <option selected disabled>Select Class</option>
+                                <option selected disabled value="">Select Class</option>
                                 {% for class in classes %}
                                 <option value="{{class.0}}">{{class.0}}</option>
                                 {% endfor %}
@@ -337,37 +342,62 @@
                         </div>
                         <div class="col-md-6 col-lg-5 col-12 input-group form-group">
                             <label class="control-label col-sm-5 col-5 mt-2" style="color:black;">Select Course<span
-                                class="text-danger">*</span></label>
+                                    class="text-danger">*</span></label>
 
                             <select class="form-control" id="select_course" name="course" required>
                                 <option selected disabled value="">Select Course</option>
                             </select>
                         </div>
-                        <div class="col-lg-5 col-md-6 col-12 input-group form-group">
-                            <label class="control-label col-sm-5 col-5 mt-2" style="color: black;">Choose File<span
-                                class="text-danger">*</span></label>
-                            <div class="file-box w-100 col-sm-7 col-7">
-                                <input type="file" class="custom-file-input" required onchange="addfile(this)"
-                                    name="note" accept="application/pdf">
-                                <label class="custom-file-label" for="validatedCustomFile">Choose file...</label>
-                                <div class="invalid-feedback">Invalid File Format ( Valid Formats are .pdf only )
+                    </div>
+                    <div class="outside">
+                        <div class="row entry">
+                            <div class="col-md-6 col-lg-5 col-12 input-group form-group">
+                                <label class="control-label col-sm-5 col-5 mt-2" style="color:black;">Note Title<span
+                                        class="text-danger">*</span></label>
+                                <input type="text" class="form-control" name='title' placeholder="Note Title"
+                                    required="">
+                            </div>
+
+                            <div class="col-md-6 col-lg-5 col-12 input-group form-group">
+                                <label class="control-label col-sm-5 col-5 mt-2" style="color:black;">Description<span
+                                        class="text-danger">*</span></label>
+                                <input type="text" class="form-control" name='description'
+                                    placeholder="Note Description" required>
+                            </div>
+                            <div class="col-md-6 col-lg-5 col-12 input-group form-group">
+                                <label class="control-label col-sm-5 col-5 mt-2" style="color:black;">Price<span
+                                        class="text-danger">*</span></label>
+                                <input type="number" min="0" class="form-control" name='price' required>
+                            </div>
+                            <div class="col-lg-5 col-md-6 col-12 input-group form-group">
+                                <label class="control-label col-sm-5 col-5 mt-2" style="color: black;">Choose File<span
+                                        class="text-danger">*</span></label>
+                                <div class="file-box w-100 col-sm-7 col-7">
+                                    <input type="file" class="custom-file-input" required onchange="addfile(this)"
+                                        name="note" accept="application/pdf">
+                                    <label class="custom-file-label" for="validatedCustomFile">Choose file...</label>
+                                    <div class="invalid-feedback">Invalid File Format ( Valid Formats are .pdf only )
+                                    </div>
                                 </div>
                             </div>
+
+                            <div class="col-md-6 col-lg-5 col-12 input-group form-group">
+                                <label class="control-label col-sm-5 col-5 mt-2" style="color:black;">Free for Enrolled</label>
+                                        <select class="form-control" name="enr">
+                                            <option selected value="0">No</option>
+                                            <option value="1">Yes</option>
+                                        </select>
+                            </div>
+                            
+                            <div class="col-lg-12 col-md-12  col-12 d-flex justify-content-end">
+                                <button class="btn btn-success btn-md" type="button" onclick="duplicate(this)">Add
+                                    File</button>
+                            </div>
                         </div>
-                        <div class="col-lg-12 col-md-12  col-12 d-flex justify-content-end">
-                            <button class="btn btn-info btn-md" type="button" onclick="duplicate(this)">Add File</button>
-                        </div>
-                        <div class="col-md-6 col-lg-5 col-12 input-group form-group">
-                            <label class="control-label col-sm-5 col-5 mt-2" style="color:black;">Price</label>
-                            <input type="text" class="form-control" name='price' required placeholder="0" >
-                        </div>
-                        <div class="col-md-12 col-lg-12 col-12 input-group form-group">
-                            <textarea type="text" class="form-control my-2 w-100" name='description'
-                                placeholder="Note Description"></textarea>
-                        </div>
-                        <div class="col-lg-12 col-md-12 col-12 text-center">
-                            <button id='submitBtn' name="submit" type="submit" class="btn btn-info">Add Note</button>
-                        </div>
+                    </div>
+                    <div class="col-lg-12 col-md-12 col-12 text-center">
+                        <button id='submitBtn' name="submit" type="submit" class="btn btn-info">Add
+                            Note</button>
                     </div>
                 </form>
             </div>
@@ -393,22 +423,28 @@
                             <th>Note Title</th>
                             <th>Class</th>
                             <th>Subject</th>
+                            <th>Description</th>
+                            <th>Price</th>
+                            <th>Last Updated</th>
                             <th class="text-center">Action</th>
                         </tr>
                         {% for i in notes %}
                         <tr>
                             <td>{{forloop.counter}}</td>
                             <td>
-                                <p style="color: black;font-size: 14px;">{{i.title}}</p>
+                                {{i.title}}
                             </td>
                             <td>
-                                <p style="color: black;font-size: 14px;">{{i.forclass}}</p>
+                                {{i.forclass}}
                             </td>
                             <td>
-                                <p style="color: black;font-size: 14px;">{{i.subject}}</p>
+                                {{i.subject}}
                             </td>
+                            <td>{{i.description}}</td>
+                            <td>{% if i.price %} {{i.price}} {% else %} Free {% endif %}</td>
+                            <td>{{i.date|date:'F d,Y'}}</td>
                             <td class="d-flex justify-content-center">
-                                <a class="btn btn-info mx-2" href="{{i.notes.url}}" target="_blank"><i
+                                <a class="btn btn-info mx-2" href="{% url 'viewinstitutenotespdf' i.id %}" target="_blank"><i
                                         class="flaticon-view" style="font-size:large;"></i></a>
                                 <a class="btn btn-warning mx-2" href="{% url 'EditnoteInstitute' i.id %}"><i
                                         class="flaticon-pencil-line" style="font-size:large;"></i></a>
@@ -458,10 +494,17 @@
             success: function (data) {
                 courses = data.courses;
                 $("#select_course").empty().trigger("change");
+                var newOption = new Option(
+                        "Select Course",
+                        "",
+                        false,
+                        false
+                    );
+                    $("#select_course").append(newOption).trigger("change");
                 for (i = 0; i < courses.length; i++) {
                     var newOption = new Option(
                         courses[i][1],
-                        courses[i][0],
+                        courses[i][1],
                         false,
                         false
                     );
@@ -472,9 +515,26 @@
     }
 
     function duplicate(el) {
-        $(el).parent().before(`<div class="col-lg-5 col-md-6 col-12 input-group form-group">
-                            <label class="control-label col-sm-5 col-5 mt-2" style="color: black;">Choose File<span
+        $('.outside').append(`<div class="row entry"> <div class="col-md-6 col-lg-5 col-12 input-group form-group">
+                            <label class="control-label col-sm-5 col-5 mt-2" style="color:black;">Note Title<span
+                                    class="text-danger">*</span></label>
+                            <input type="text" class="form-control" name='title' placeholder="Note Title" required="">
+                        </div>
+                        
+                        <div class="col-md-6 col-lg-5 col-12 input-group form-group">
+                            <label class="control-label col-sm-5 col-5 mt-2" style="color:black;">Description<span
                                 class="text-danger">*</span></label>
+                            <input type="text" class="form-control" name='description'
+                                placeholder="Note Description" required>
+                        </div>
+                        <div class="col-md-6 col-lg-5 col-12 input-group form-group">
+                            <label class="control-label col-sm-5 col-5 mt-2" style="color:black;">Price<span
+                                    class="text-danger">*</span></label>
+                            <input type="number" min="0" class="form-control" name='price' required>
+                        </div>
+                        <div class="col-lg-5 col-md-6 col-12 input-group form-group">
+                            <label class="control-label col-sm-5 col-5 mt-2" style="color: black;">Choose File<span
+                                    class="text-danger">*</span></label>
                             <div class="file-box w-100 col-sm-7 col-7">
                                 <input type="file" class="custom-file-input" required onchange="addfile(this)"
                                     name="note" accept="application/pdf">
@@ -482,7 +542,29 @@
                                 <div class="invalid-feedback">Invalid File Format ( Valid Formats are .pdf only )
                                 </div>
                             </div>
+                        </div>
+                        <div class="col-md-6 col-lg-5 col-12 input-group form-group">
+                                <label class="control-label col-sm-5 col-5 mt-2" style="color:black;">Free for Enrolled</label>
+                                        <select class="form-control" name="enr">
+                                            <option selected value="0">No</option>
+                                            <option value="1">Yes</option>
+                                        </select>
+                            </div>
+                        <div class="col-lg-12 col-md-12  col-12 d-flex justify-content-end">
+                            <button class="btn btn-success" type="button" onclick="removeduplicate(this)">Remove</button>
+                        </div>
                         </div>`)
-                    }
+    }
+
+    function removeduplicate(el) {
+        $(el).closest(".entry").empty().trigger("change");
+    }
+
+    $(document).on('ready', () => {
+        if (performance.navigation.type == 2) {
+            location.reload();
+        }
+    });
+
 </script>
 {% endblock main-content %}
