--- a/templates/Notes/editNotesTutor.html
+++ b/templates/Notes/editNotesTutor.html
@@ -6,7 +6,7 @@
     <div class="alert alert-warning" role="alert">
         <ul class="messages">
             {% for k in messages %}
-            <li style="color: darkred;">{{ k }}</li>
+            <li style="color: rgb(0, 0, 0);">{{ k }}</li>
             {% endfor %}
         </ul>
     </div>
@@ -26,55 +26,78 @@
             <div class="card-body">
                 <form method='post' action='' enctype='multipart/form-data'>{% csrf_token %}
                     <div class="row">
+                        <div class="col-md-6 col-lg-5 col-12 input-group form-group">
+                            <label class="control-label col-sm-5 col-5 mt-2" style="color:black;">Select Class<span
+                                class="text-danger">*</span></label>
 
-                        <div class="col-md-6 col-lg-4 col-12 input-group form-group">
-                            <label class="control-label col-sm-4 col-5 mt-2"
-                                style="color: black;">Title</label>
-                            <input type="text" step="0.01" class="form-control w-100 col-sm-8 col-7"
-                                id="title" name="title" placeholder="Enter Note Title" required value="{{note.title}}">
-                        </div>
-
-                        <div class="col-md-6 col-lg-4 col-12 input-group form-group">
-                            <label class="control-label col-sm-4 col-5 mt-2"
-                                style="color: black;">Course</label>
-                            <select id="course" name="course"
-                                class="custom-select form-control w-100 col-sm-8 col-7" required>
-                                <option disabled selected>{{note.subject}}</option>
-                                {% for course in courses %}
-                                <option value="{{course.courseName}}">{{course.courseName}}</option>
+                            <select class="form-control" id="class_select" name="forclass" onchange="selectclass(this)"
+                                required>
+                                <option selected value="{{note.forclass}}">{{note.forclass}}</option>
+                                {% for class in classes %}
+                                {% if class.0 != note.forclass %}
+                                <option value="{{class.0}}">{{class.0}}</option>
+                                {% endif %}
                                 {% endfor %}
                             </select>
                         </div>
+                        <div class="col-md-6 col-lg-5 col-12 input-group form-group">
+                            <label class="control-label col-sm-5 col-5 mt-2" style="color:black;">Select Course<span
+                                    class="text-danger">*</span></label>
 
-                        <div class="col-lg-4 col-md-6 col-12 input-group form-group">
-                            <label class="file-box control-label col-sm-4 col-5 mt-2" style="color: black;">Choose File</label>
-                            <div class="w-100 col-sm-8 col-7">
-                            <input type="file" class="custom-file-input" id="file" name="note" required onchange="addfile(this)">
-                            <label class="custom-file-label" >Choose file...</label>
+                            <select class="form-control" id="select_course" name="course" required>
+                                <option selected value="{{note.subject}}">{{note.subject}}</option>
+                            </select>
+                        </div>
+                        <div class="col-md-6 col-lg-5 col-12 input-group form-group">
+                            <label class="control-label col-sm-5 col-5 mt-2" style="color:black;">Note Title<span
+                                    class="text-danger">*</span></label>
+                            <input type="text" class="form-control" name='title' placeholder="Note Title" required=""
+                                value="{{note.title}}">
+                        </div>
+
+                        <div class="col-md-6 col-lg-5 col-12 input-group form-group">
+                            <label class="control-label col-sm-5 col-5 mt-2" style="color:black;">Description<span
+                                    class="text-danger">*</span></label>
+                            <input type="text" class="form-control" name='description' placeholder="Note Description" value="{{note.description}}">
+                        </div>
+
+                        <div class="col-md-6 col-lg-5 col-12 input-group form-group">
+                            <label class="control-label col-sm-5 col-5 mt-2" style="color:black;">Price<span
+                                    class="text-danger">*</span></label>
+                            <input type="number" min="0" class="form-control" name='price' required value="{{note.price}}">
+                        </div>
+
+                        <div class="col-lg-5 col-md-6 col-12 input-group form-group">
+                            <label class="control-label col-sm-5 col-5 mt-2" style="color: black;">Choose File<span
+                                    class="text-danger">*</span></label>
+                            <div class="file-box w-100 col-sm-7 col-7">
+                                <input type="file" class="custom-file-input" onchange="addfile(this)"
+                                    name="note" accept="application/pdf">
+                                <label class="custom-file-label" for="validatedCustomFile">Choose file...</label>
+                                <div class="invalid-feedback">Invalid File Format ( Valid Formats are .pdf only )
+                                </div>
                             </div>
                         </div>
 
-                        <div class="col-lg-12 col-md-12  col-12 d-flex justify-content-end">
-                            <button class="btn btn-info btn-md" type="button" onclick="duplicate(this)">Add File</button>
-                        </div>
-
-                        <div class="col-md-12 col-lg-12 col-12 input-group form-group">
-                            <textarea class="form-control my-2 w-100" name='description'
-                                placeholder="Note Description">{{note.description}}</textarea>
-                        </div>
-
                         <div class="col-lg-12 col-md-12 col-12 text-center">
-                            <button id='submitBtn' name="submit" type="submit" class="btn btn-info">Add Note</button>
+                            <button id='submitBtn' name="submit" type="submit" class="btn btn-info">Save Note</button>
                         </div>
                 </form>
             </div>
         </div>
     </div>
 </div>
-{% endblock main-content %}
 
 
 <script>
+    $(document).ready(() => {
+        var file = `{{note.notes.name}}`;
+        if (file.length > 25) {
+            file = file.substring(0, 25) + '  ...';
+        };
+        $(".custom-file-label").html(file);
+    })
+    
     function addfile(el) {
         var file = $(el).val();
         var exts = ['pdf'];
@@ -96,14 +119,30 @@
             }
         }
     }
-
-    function duplicate(el) {
-        $(el).parent().before(`<div class="col-lg-4 col-md-6 col-12 input-group form-group">
-                            <label class="file-box control-label col-sm-4 col-5 mt-2" style="color: black;">Choose File</label>
-                            <div class="w-100 col-sm-8 col-7">
-                            <input type="file" class="custom-file-input" id="file" name="note" required onchange="addfile(this)">
-                            <label class="custom-file-label" >Choose file...</label>
-                            </div>
-                        </div>`)
-                    }
-</script>
+    
+    function selectclass(el) {
+        var data = {{ data| safe }};
+        courses = data[el.value];
+        
+        $("#select_course").empty().trigger("change");
+        var newOption = new Option(
+            "Select Course",
+            "",
+            false,
+            false
+            );
+        $("#select_course").append(newOption).trigger("change");
+        
+        for (i = 0; i < courses.length; i++) {
+            var newOption = new Option(
+                courses[i],
+                courses[i],
+                false,
+                false
+                );
+                $("#select_course").append(newOption).trigger("change");
+            }
+        }
+        
+    </script>
+        {% endblock main-content %}
