--- a/templates/Results/GetExamResultCenter.html
+++ b/templates/Results/GetExamResultCenter.html
@@ -5,45 +5,59 @@
     .darken-grey-text {
         color: #2E2E2E;
     }
+
     .input-group.md-form.form-sm.form-2 input {
         border: 1px solid #bdbdbd;
         border-top-left-radius: 0.25rem;
         border-bottom-left-radius: 0.25rem;
     }
+
     .input-group.md-form.form-sm.form-2 input.purple-border {
         border: 1px solid #9e9e9e;
     }
+
     .input-group.md-form.form-sm.form-2 input[type=text]:focus:not([readonly]).purple-border {
         border: 1px solid #ba68c8;
         box-shadow: none;
     }
+
     .form-2 .input-group-addon {
         border: 1px solid #ba68c8;
     }
+
     .danger-text {
         color: #ff3547;
     }
+
     .success-text {
         color: #00C851;
     }
-    .table-bordered.red-border, .table-bordered.red-border th, .table-bordered.red-border td {
-        border: 1px solid #ff3547!important;
+
+    .table-bordered.red-border,
+    .table-bordered.red-border th,
+    .table-bordered.red-border td {
+        border: 1px solid #ff3547 !important;
     }
+
     .table.table-bordered th {
         text-align: center;
     }
-    .bigcheckbox{
+
+    .bigcheckbox {
         width: 25px;
         height: 25px;
     }
+
     .arcinput {
-        background-color:transparent;
+        background-color: transparent;
         border: 0;
     }
-    .container{
-        max-width:1250px;
-        width:100%;
+
+    .container {
+        max-width: 1250px;
+        width: 100%;
     }
+
     .color-pattern-3 {
         text-align: center;
     }
@@ -69,6 +83,7 @@
         -moz-transition: all 0.3s;
         transition: all 0.3s;
     }
+
     .button:after {
         content: '';
         position: absolute;
@@ -83,13 +98,16 @@
         background: #fcad26;
         color: #fff;
     }
+
     .button-3:hover {
         background: #f29e0d;
     }
+
     .button-3:active {
         background: #f58500;
         top: 2px;
     }
+
     .button-3>.fa {
         position: absolute;
         height: 100%;
@@ -98,6 +116,7 @@
         font-size: 140%;
         width: 60px;
     }
+
     .button-3>.fa:before {
         position: absolute;
         width: 25px;
@@ -108,33 +127,41 @@
         bottom: 0;
         margin: auto;
     }
+
     /* Button 3a */
     .button-3a {
         padding: 25px 60px 25px 120px;
     }
+
     .button-3a>.fa {
         background: rgba(0, 0, 0, 0.05);
     }
+
     /* Button 3b */
     .button-3b {
         padding: 25px 60px 25px 120px;
         border-radius: 10px;
     }
+
     .button-3b>.fa {
         border-right: 2px solid rgba(255, 255, 255, 0.75);
     }
+
     /* Button 3c */
     .button-3c {
         padding: 80px 20px 20px 20px;
         border-radius: 10px;
         box-shadow: 0 3px #da9622;
     }
+
     .button-3c>.fa:before {
         position: static;
     }
+
     .button-3c:active {
         box-shadow: 0 3px #dc7801;
     }
+
     .button-3c>.fa {
         height: 60px;
         width: 100%;
@@ -143,20 +170,24 @@
         color: #f29e0d;
         border-radius: 10px 10px 0 0;
     }
+
     .button-3c:active:before {
         color: #f58500;
     }
+
     /* Button 3d */
     .button-3d {
         padding: 25px 60px 25px 120px;
         border-radius: 10px;
     }
+
     .button-3d>.fa {
         background: #fff;
         color: #fcad26;
         z-index: 2;
         border-radius: 10px 0 0 10px;
     }
+
     .button-3d:after {
         width: 20px;
         height: 20px;
@@ -170,25 +201,31 @@
         -ms-transform: rotate(45deg);
         transform: rotate(45deg);
     }
+
     .button-3d:active:before {
         color: #f58500;
     }
+
     .button-3d:active {
         top: 0;
     }
+
     .button-3d:active:after {
         left: 60px;
     }
+
     /* Button 3e */
     .button-3e {
         padding: 25px 120px 25px 60px;
         overflow: hidden;
     }
+
     .button-3e>.fa {
         left: auto;
         right: 10px;
         z-index: 2;
     }
+
     .button-3e:after {
         width: 30%;
         height: 200%;
@@ -206,6 +243,7 @@
         transform-origin: 0 0;
         transform: rotate(-20deg);
     }
+
     .button-3e:hover:after {
         width: 35%;
     }
@@ -222,22 +260,23 @@
                     <div class="col-md-8">
                         <h2 style="color: rgb(0, 0, 0);">List of Students</h2>
                     </div>
-                    
+
                     <div class="col-md-4">
                         <input id="searchbox" type="text" class="form-control" name='srh' placeholder="Search" required>
                     </div>
                 </div>
                 <!-- Grid column -->
             </div>
-            {% if students %}
+            {% if size %}
             <div class="card-body">
                 <!-- Grid row -->
                 <form action="" method="post">{% csrf_token %}
                     <!--Table-->
                     <div class="table-responsive">
-                    <table class="table table-striped table-bordered table-hover">
-                        <!--Table head-->
+                        <table class="table table-striped table-bordered table-hover">
+                            <!--Table head-->
                             <tr>
+                                <th>#</th>
                                 <th>Student Name</th>
                                 <th>Batch</th>
                                 <th>Exam Name</th>
@@ -247,74 +286,78 @@
                                 <th class="text-center">Results</th>
                                 <th class="text-center">Reports</th>
                             </tr>
-                        <!--Table head-->
-                        <!--Table body-->
+                            <!--Table head-->
+                            <!--Table body-->
                             {% for i,batch in students %}
                             <tr>
-                            <td>{{i.student.user.username}}</td>
-                            <td>{{batch}}</td>
-                            <td>{{i.exam.Name}}</td>
-                            <td>{{i.exam.exam_date}}</td>
-                            <td>{{i.exam.exam_duration}}</td>
-                            {% if i.PassStatus %}
-                            <td class="text-center"><button class="stat btn btn-success">Pass</button></td>
-                            {% else %}
-                            <td class="text-center"><button class="stat btn btn-danger">Fail</button></td>
-                            {% endif %}
-                            <td class="text-center"><a href="{% url 'studentresult' i.id i.exam.id %}" class="btn btn-primary">Result</a></td>
-                            <td class="text-center"><a href="{% url 'anotatePdfViewer' i.exam.id i.id %}" class="btn btn-primary">Anotate Result</a></td>
+                                <td>{{forloop.counter}}</td>
+                                <td>{% if i.student.user.first_name %}{{i.student.user.first_name}}
+                                    {{i.student.user.last_name}} {% else %} {{i.student.user.username}} {% endif %}</td>
+                                <td>{{batch}}</td>
+                                <td>{{i.exam.Name}}</td>
+                                <td>{{i.exam.exam_date}}</td>
+                                <td>{{i.exam.exam_duration}}</td>
+                                {% if i.PassStatus %}
+                                <td class="text-center"><button class="stat btn btn-success">Pass</button></td>
+                                {% else %}
+                                <td class="text-center"><button class="stat btn btn-danger">Fail</button></td>
+                                {% endif %}
+                                <td class="text-center"><a href="{% url 'studentresult' i.id i.exam.id %}"
+                                        class="btn btn-primary">Result</a></td>
+                                <td class="text-center"><a href="{% url 'anotatePdfViewer' i.exam.id i.id %}"
+                                        class="btn btn-primary">Anotate Result</a></td>
                             </tr>
                             {% endfor %}
-                        <!--Table body-->
-                    </table>
-                </div>
+                            <!--Table body-->
+                        </table>
+                    </div>
                     <!--Table-->
                 </form>
                 <br>
             </div>
             {% else %}
-                <div class="card-header" style="background: none;">
-                    <div class="row">
-                        <div class="col-xl-12 col-md-12 col-12">
-                            <h2>No Students to show</h2>
-                        </div>
+            <div class="card-header" style="background: none;">
+                <div class="row">
+                    <div class="col-xl-12 col-md-12 col-12">
+                        <h2>No Students to show</h2>
                     </div>
                 </div>
+            </div>
             {% endif %}
         </div>
-    </main>
-    <script type="text/javascript">
-        trlist = $("tbody>tr");
-        $("body").on('input',"#searchbox",function(){
-            trlist.hide();
-            search = this.value.toLowerCase();
-            len = search.length;
-            for(i=0;i<trlist.length;i++){
-                if(trlist[i].children[0].textContent==""){
-                    cont = cont;
-                }
-                else{
-                    cont = trlist[i].children[0].textContent.toLowerCase();
-                }
-                if(cont.search(search)!=-1){
-                    $(trlist[i]).show();
-                }
-                if(trlist[i].children[1].textContent==""){
-                    cont2 = cont2;
-                }
-                else{
-                    cont2 = trlist[i].children[1].textContent.toLowerCase();
-                }
-                if(cont2.search(search)!=-1){
-                    $(trlist[i]).show();
-                }
+</main>
+<script type="text/javascript">
+    trlist = $("tbody>tr");
+    $("body").on('input', "#searchbox", function () {
+        trlist.hide();
+        search = this.value.toLowerCase();
+        len = search.length;
+        for (i = 0; i < trlist.length; i++) {
+            if (trlist[i].children[0].textContent == "") {
+                cont = cont;
             }
+            else {
+                cont = trlist[i].children[0].textContent.toLowerCase();
+            }
+            if (cont.search(search) != -1) {
+                $(trlist[i]).show();
+            }
+            if (trlist[i].children[1].textContent == "") {
+                cont2 = cont2;
+            }
+            else {
+                cont2 = trlist[i].children[1].textContent.toLowerCase();
+            }
+            if (cont2.search(search) != -1) {
+                $(trlist[i]).show();
+            }
+        }
 
-        });
+    });
 
-        $('.stat').on('click', (e)=>{
-            e.preventDefault();
-        })
+    $('.stat').on('click', (e) => {
+        e.preventDefault();
+    })
 
-    </script>
-    {% endblock %}
+</script>
+{% endblock %}
