--- a/templates/Results/ResultInstitute.html
+++ b/templates/Results/ResultInstitute.html
@@ -238,6 +238,7 @@
                     <table class="table table-striped table-bordered table-hover mb-4">
                         <!--Table head-->
                             <tr>
+                                <th>#</th>
                                 <th>Exam Name</th>
                                 <th>Course</th>
                                 <th>Exam Date</th>
@@ -250,6 +251,7 @@
                         <!--Table body-->
                             {% for i in exams %}
                             <tr class="main-row">
+                                <td>{{forloop.counter}}</td>
                                 <td>{{i.Name}}</td>
                                 <td>{{i.course.courseName}}</td>
                                 <td>{{i.exam_date}}</td>
