--- a/templates/Results/ResultTeacher.html
+++ b/templates/Results/ResultTeacher.html
@@ -272,18 +272,19 @@
             <div class="card-body">
                 <!-- Grid row -->
 
+                {% if exams %}
                 <div class="col-lg-12 col-sm-12 mb-3">
                     <label class="form-check-label" for="defaultCheck1">
                         Exam For Institute
                     </label>
                 </div>
-                {% if exams %}
                 <form action="" method="post">{% csrf_token %}
                     <!--Table-->
                     <div class="table-responsive">
                         <table class="table table-striped table-bordered table-hover mb-4">
                             <!--Table head-->
                             <tr>
+                                <th>#</th>
                                 <th>Exam Name</th>
                                 <th>Course</th>
                                 <th>Exam Date</th>
@@ -296,6 +297,7 @@
                             <!--Table body-->
                             {% for i in exams %}
                             <tr class="main-row">
+                                <td>{{forloop.counter}}</td>
                                 <td>{{i.Name}}</td>
                                 <td>{{i.course.courseName}}</td>
                                 <td>{{i.exam_date}}</td>
@@ -313,18 +315,19 @@
                 </form>
                 {% endif %}
 
+                {% if tutorexams %}
                 <div class="col-lg-12 col-sm-12 mb-3">
                     <label class="form-check-label" for="defaultCheck1">
                         Exam For Sell
                     </label>
                 </div>
-                {% if tutorexams %}
                 <form action="" method="post">{% csrf_token %}
                     <!--Table-->
                     <div class="table-responsive">
                         <table class="table table-striped table-bordered table-hover mb-4">
                             <!--Table head-->
                             <tr>
+                                <th>#</th>
                                 <th>Exam Name</th>
                                 <th>Course</th>
                                 <th>Exam Date</th>
@@ -337,6 +340,7 @@
                             <!--Table body-->
                             {% for i in tutorexams %}
                             <tr class="main-row">
+                                <td>{{forloop.counter}}</td>
                                 <td>{{i.Name}}</td>
                                 <td>{{i.courseName}}</td>
                                 <td>{{i.exam_date}}</td>
