--- a/templates/Results/StudentResult.html
+++ b/templates/Results/StudentResult.html
@@ -3,21 +3,22 @@
 {% block main-content %}
 
 <style>
-  h6{
+  h6 {
     font-size: .99em;
   }
 </style>
 
 <div class="mt-5 mb-3 card">
   <div class="card-header">
-  <h3 class="m-2 text-dark">
-    <b>
-     <center>
-      {{mapping.student.user.first_name}} {{mapping.student.user.last_name}} Result
-     </center>
-    </b>
-  </h3>
-</div>
+    <h3 class="m-2 text-dark">
+      <b>
+        <center>
+          {% if mapping.student.user.first_name %} {{mapping.student.user.first_name}}
+          {{mapping.student.user.last_name}} {% else %} {{i.mapping.user.username}} {% endif %} Result
+        </center>
+      </b>
+    </h3>
+  </div>
 
   <div class="card-body">
     <div class="mb-3 text-right">
@@ -26,11 +27,7 @@
         {% csrf_token %}
         <button class="btn btn-success">Update Results</button>
       </form>
-      <a
-        class="btn btn-secondary"
-        href="{% url 'anotatePdfViewer' exam.id mapping.id %}"
-        >View Report</a
-      >
+      <a class="btn btn-secondary" href="{% url 'anotatePdfViewer' exam.id mapping.id %}">View Report</a>
     </div>
 
     <!-- added table -->
@@ -55,33 +52,23 @@
                   <h6>Extra Time Taken: {{question.extra_time}}</h6>
                 </div>
                 {% if question.qtype == 'short' or question.qtype == 'long' %}
-                
-                <form style="display: none; width: 210px;" class="check-form" method="POST" action="{% url 'check_answer' question.id %}">
+
+                <form style="display: none; width: 210px;" class="check-form" method="POST"
+                  action="{% url 'check_answer' question.id %}">
                   {% csrf_token %}
                   <div class="input-group">
-                  <input
-                    required
-                    max="{{question.marks}}"
-                    min="-{{question.negative_marks}}"
-                    class="form-control"
-                    name="marks"
-                    type="number"
-                    placeholder="Enter Marks"
-                    style="width: fit-content;"
-                  />
-                  <button class="input-group-append btn btn-success">Enter</button>
-                </div>
+                    <input required max="{{question.marks}}" min="-{{question.negative_marks}}" class="form-control"
+                      name="marks" type="number" placeholder="Enter Marks" style="width: fit-content;" />
+                    <button class="input-group-append btn btn-success">Enter</button>
+                  </div>
                 </form>
 
                 <div>
-                  
+
                   <button class="btn btn-success" onclick="check(this)"> {% if question.marks_given %} Recheck {% else %} Check {% endif %}</button>
                   {% if question.input_ans_Image %}
-                  <a
-                    href="{% url 'check_answer' question.id %}"
-                    class="ml-1  btn btn-secondary"
-                    >View Image</a>
-                  {% endif %}  
+                  <a href="{% url 'check_answer' question.id %}" class="ml-1  btn btn-secondary">View Image</a>
+                  {% endif %}
                 </div>
 
                 {% endif %}
@@ -98,16 +85,16 @@
 </div>
 
 <script>
-$(document).ready(function(){
-  var edits = $('.edit')
-  for (let i = 0; i < edits.length; i++) {
-    edits[i].innerHTML = $(edits[i]).text()
-  }
-})
+  $(document).ready(function () {
+    var edits = $('.edit')
+    for (let i = 0; i < edits.length; i++) {
+      edits[i].innerHTML = $(edits[i]).text()
+    }
+  })
 
-function check(el){
-  $(el).parent().parent().find('.check-form').css('display','block')
-  $(el).css('display','none')
-}
+  function check(el) {
+    $(el).parent().parent().find('.check-form').css('display', 'block')
+    $(el).css('display', 'none')
+  }
 </script>
 {% endblock %}
