--- a/templates/dashboard/Tutor-dashboard.html
+++ b/templates/dashboard/Tutor-dashboard.html
@@ -37,11 +37,11 @@
 </head>
 
 <body>
-  <div id="eq-loader">
+  <!-- <div id="eq-loader">
     <div class="eq-loader-div">
       <div class="eq-loading dual-loader mx-auto mb-5"></div>
     </div>
-  </div>
+  </div> -->
 
   <!--  BEGIN NAVBAR  -->
   <header class="desktop-nav header navbar fixed-top">
@@ -221,10 +221,6 @@
                         <li><a href="{% url 'examtutor' %}">Add Exam</a>
                         </li>
                         <li><a href="{% url 'viewexamstutor' %}">View/Delete/Update Exam</a>
-                        </li>
-                        <li><a href="{% url 'addquestionstutor' %}">Add Exam Questions</a>
-                        </li>
-                        <li><a href="{% url 'questionalltutor' %}">View/Delete/Update Questions</a>
                         </li>
                       </ul>
                     </li>
