--- a/templates/dashboard/base.html
+++ b/templates/dashboard/base.html
@@ -45,11 +45,11 @@
 </head>
 
 <body>
-  <div id="eq-loader">
+  <!-- <div id="eq-loader">
     <div class="eq-loader-div">
       <div class="eq-loading dual-loader mx-auto mb-5"></div>
     </div>
-  </div>
+  </div> -->
 
   <!--  BEGIN NAVBAR  -->
   <header class="desktop-nav header navbar fixed-top">
@@ -376,10 +376,6 @@
                         <li><a href="{% url 'addexam' %}">Add Exam</a>
                         </li>
                         <li><a href="{% url 'viewexams' %}">View /Delete /Update Exam</a>
-                        </li>
-                        <li><a href="{% url 'questionsection' %}">Add Exam Questions</a>
-                        </li>
-                        <li><a href="{% url 'editexamquestions' %}">View /Delete /Update Exam</a>
                         </li>
                       </ul>
                     </li>
