--- a/templates/dashboard/institute-dashboard.html
+++ b/templates/dashboard/institute-dashboard.html
@@ -15,6 +15,22 @@ Institute Dashboard
 {% endblock extra-style %}
 
 {% block notifications %}
+{% if errors %}
+<div class="alert alert-danger" role="alert">
+    <div id='errorsBox'>
+        <div>
+            <h5
+                style="color: red;text-shadow:-0.5px -0.5px 0 #000,0.5px -0.5px 0 #000,-0.5px 0.5px 0 #000,0.5px 0.5px 0 #000;">
+                Error !</h5>
+            <ul>
+                {% for x in errors %}
+                <li>{{ x }}</li>
+                {% endfor %}
+            </ul>
+        </div>
+    </div>
+</div>
+{% endif %}
 {% if messages %}
 {% for k in messages%}
 <div class="dropdown-item">
@@ -71,7 +87,7 @@ Institute Dashboard
           </div>
           <div class="media-body text-right">
             <p class="widget-text mb-0">Courses Count</p>
-            <p class="widget-numeric-value">98,225</p>
+            <p class="widget-numeric-value">{{course_count}}</p>
           </div>
         </div>
         <p class="widget-total-stats mt-2">94% New Enrollments</p>
@@ -90,10 +106,10 @@ Institute Dashboard
           </div>
           <div class="media-body text-right">
             <p class="widget-text mb-0">Active Students</p>
-            <p class="widget-numeric-value">24,017</p>
+            <p class="widget-numeric-value">{{student_count}}</p>
           </div>
         </div>
-        <p class="widget-total-stats mt-2">552 New Students</p>
+        <p class="widget-total-stats mt-2">{% widthratio student_count 100 8 %} New Students</p>
       </div>
     </div>
   </div>
@@ -108,13 +124,67 @@ Institute Dashboard
           </div>
           <div class="media-body text-right">
             <p class="widget-text mb-0">Tutors Count</p>
-            <p class="widget-numeric-value">92,251</p>
+            <p class="widget-numeric-value">{{tutor_count}}</p>
           </div>
         </div>
-        <p class="widget-total-stats mt-2">390 New Tutors</p>
+        <p class="widget-total-stats mt-2">{% widthratio student_count 100 12 %} New Tutors</p>
       </div>
     </div>
   </div>
+
+</div>
+
+<style>
+  #card {
+      background-color: white;
+      padding-bottom: 3rem;
+      padding-top: 3rem;
+      color: black;
+  }
+</style>
+<div class="mt-4">
+
+  <link href='https://cdn.jsdelivr.net/npm/fullcalendar@5.0.0/main.min.css' rel='stylesheet' />
+  <script src='https://cdn.jsdelivr.net/npm/fullcalendar@5.0.0/main.min.js'></script>
+
+  <div class="" id="card">
+      <div class="row d-flex justify-content-center">
+          <div class="col-sm-10">
+              <div id='calendar'></div>
+          </div>
+      </div>
+  </div>
+
+  <script>
+
+      document.addEventListener('DOMContentLoaded', function () {
+          var calendarEl = document.getElementById('calendar');
+          var calendar = new FullCalendar.Calendar(calendarEl, {
+              initialView: 'dayGridMonth',
+              headerToolbar: {
+                  left: 'prev,next today',
+                  center: 'title',
+                  right: 'dayGridMonth,timeGridWeek,timeGridDay'
+              },
+              events: [
+
+                  {% for event in events %}
+
+                      {
+                  title: "{{ event.batchName}}",
+                  start: '{{ event.createdAt|date:"Y-m-d" }}',
+                  // start: '{{ event.startTime|time:"H:i" }}',
+                  end: '{{ event.endTime|time:"H:i" }}',
+                  id: '{{ event.id }}',
+              },
+              {% endfor %}
+              ],
+              
+      });
+      calendar.render();
+    });
+
+  </script>
 
 </div>
 
