--- a/templates/students/viewStudents.html
+++ b/templates/students/viewStudents.html
@@ -28,45 +28,50 @@
             </div>
                 <!-- Grid column -->
             </div>
-            {% if students %}
+            {% if size %}
             <div class="card-body">
                 <!-- Grid row -->
-                <div style="overflow-x:scroll;">
                 <form action=" " method="post">{% csrf_token %}
                     <!--Table-->
                     <div class="table-responsive">
-                    <table class="table table-striped">
+                    <table class="table table-striped" style="font-size: small;">
                         <!--Table head-->
                             <tr>
-                                <th>Student Name</th>
+                                <th>#</th>
                                 <th>First Name</th>
                                 <th>Last Name</th>
                                 <th>Email Id</th>
                                 <th>Password</th>
                                 <th>Phone Number</th>
-                                <th>Course Enrolled</th>
                                 <th>Class</th>
+                                <th>Course</th>
                                 <th class="text-center">Delete</th>
                                 <th class="text-center">Update</th>
                                 <th class="text-center">Archive</th>
                             </tr>
                         <!--Table head-->
                         <!--Table body-->
-                                {% for student,course in students %}
+                                {% for student,course,forclass,teachType in students %}
                                     <tr class="main-row">
-                                        <td>{{student.student.user.username}}</td>
-                                        <td>{{student.student.user.first_name}}</td>
-                                        <td>{{student.student.user.last_name}}</td>
-                                        <td>{{student.student.user.email}}</td>
-                                        <td>{{student.student.user.password}}</td>
-                                        <td>{{student.student.phone}}</td>
-                                        <td>{{course.courseName}}</td>
-                                        <td>{{student.forclass}}</td>
+                                        <td>{{forloop.counter}}</td>
+                                        <td>{{student.user.first_name}}</td>
+                                        <td>{{student.user.last_name}}</td>
+                                        <td>{{student.user.email}}</td>
+                                        <td>{% if student.user.password == student.phone %}
+                                            {{student.user.password}}
+                                        {% else %}
+                                            ********
+                                        {% endif %}</td>
+                                        <td>{{student.phone}}</td>
+                                        <td>{{forclass}}</td>
+                                        <td>{{course}}</td>
                                         <td class="text-center">
-                                            <a href="{% url 'deleteStudent' student.id %}" class="btn btn-danger btn-sm">DELETE</a>
+                                            <a href="{% url 'deleteStudent' student.id %}" class="btn btn-danger"><i
+                                                class="flaticon-delete-fill" style="font-size:medium;"></i></a>
                                         </td>
                                         <td class="text-center">
-                                            <a href="{% url 'editStudent' student.id %}" class="btn btn-danger btn-sm">EDIT</a>
+                                            <a href="{% url 'editStudent' student.id %}" class="btn btn-warning"><i
+                                                class="flaticon-pencil-line" style="font-size:medium;"></i></a>
                                         </td>
                                         <td class="text-center">
                                             <input type="checkbox" class="bigcheckbox" name="check" value="{{student.id}}">
@@ -82,7 +87,6 @@
                     </div>
                     <br>
                 </form>
-                </div>
                 <br>
             </div>
             {% else %}
