--- a/templates/teacher/archiveTutorList.html
+++ b/templates/teacher/archiveTutorList.html
@@ -2,233 +2,272 @@
 {% load static %}
 {% block css %}
 <style>
-.darken-grey-text {
-    color: #2E2E2E;
-}
-.input-group.md-form.form-sm.form-2 input {
-    border: 1px solid #bdbdbd;
-    border-top-left-radius: 0.25rem;
-    border-bottom-left-radius: 0.25rem;
-}
-.input-group.md-form.form-sm.form-2 input.purple-border {
-    border: 1px solid #9e9e9e;
-}
-.input-group.md-form.form-sm.form-2 input[type=text]:focus:not([readonly]).purple-border {
-    border: 1px solid #ba68c8;
-    box-shadow: none;
-}
-.form-2 .input-group-addon {
-    border: 1px solid #ba68c8;
-}
-.danger-text {
-    color: #ff3547;
-}
-.success-text {
-    color: #00C851;
-}
-.table-bordered.red-border, .table-bordered.red-border th, .table-bordered.red-border td {
-    border: 1px solid #ff3547!important;
-}
-.table.table-bordered th {
-    text-align: center;
-}
-.bigcheckbox{
-    width: 25px;
-    height: 25px;
-}
-.arcinput {
-    background-color:transparent;
-    border: 0;
-}
-.container{
-    width:100%;
-  }
-  .color-pattern-3 {
-    text-align: center;
-}
+    .darken-grey-text {
+        color: #2E2E2E;
+    }
 
-/* General button style (reset) */
-.button {
-    border: none;
-    font-family: inherit;
-    font-size: inherit;
-    color: inherit;
-    background: none;
-    cursor: pointer;
-    width: 350px;
-    padding: 25px 50px;
-    display: inline-block;
-    margin: 4px;
-    text-transform: uppercase;
-    letter-spacing: 1px;
-    font-weight: 700;
-    outline: none;
-    position: relative;
-    -webkit-transition: all 0.3s;
-    -moz-transition: all 0.3s;
-    transition: all 0.3s;
-}
-.button:after {
-    content: '';
-    position: absolute;
-    z-index: -1;
-    -webkit-transition: all 0.3s;
-    -moz-transition: all 0.3s;
-    transition: all 0.3s;
-}
+    .input-group.md-form.form-sm.form-2 input {
+        border: 1px solid #bdbdbd;
+        border-top-left-radius: 0.25rem;
+        border-bottom-left-radius: 0.25rem;
+    }
 
-/* Button 3 */
-.button-3 {
-    background: #fcad26;
-    color: #fff;
-}
-.button-3:hover {
-    background: #f29e0d;
-}
-.button-3:active {
-    background: #f58500;
-    top: 2px;
-}
-.button-3>.fa {
-    position: absolute;
-    height: 100%;
-    left: 0;
-    top: 0;
-    font-size: 140%;
-    width: 60px;
-}
-.button-3>.fa:before {
-    position: absolute;
-    width: 25px;
-    height: 25px;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    margin: auto;
-}
-/* Button 3a */
-.button-3a {
-    padding: 25px 60px 25px 120px;
-}
-.button-3a>.fa {
-    background: rgba(0, 0, 0, 0.05);
-}
-/* Button 3b */
-.button-3b {
-    padding: 25px 60px 25px 120px;
-    border-radius: 10px;
-}
-.button-3b>.fa {
-    border-right: 2px solid rgba(255, 255, 255, 0.75);
-}
-/* Button 3c */
-.button-3c {
-    padding: 80px 20px 20px 20px;
-    border-radius: 10px;
-    box-shadow: 0 3px #da9622;
-}
-.button-3c>.fa:before {
-    position: static;
-}
-.button-3c:active {
-    box-shadow: 0 3px #dc7801;
-}
-.button-3c>.fa {
-    height: 60px;
-    width: 100%;
-    line-height: 60px;
-    background: #fff;
-    color: #f29e0d;
-    border-radius: 10px 10px 0 0;
-}
-.button-3c:active:before {
-    color: #f58500;
-}
-/* Button 3d */
-.button-3d {
-    padding: 25px 60px 25px 120px;
-    border-radius: 10px;
-}
-.button-3d>.fa {
-    background: #fff;
-    color: #fcad26;
-    z-index: 2;
-    border-radius: 10px 0 0 10px;
-}
-.button-3d:after {
-    width: 20px;
-    height: 20px;
-    background: #fff;
-    z-index: 1;
-    left: 55px;
-    top: 50%;
-    margin: -10px 0 0 -10px;
-    -webkit-transform: rotate(45deg);
-    -moz-transform: rotate(45deg);
-    -ms-transform: rotate(45deg);
-    transform: rotate(45deg);
-}
-.button-3d:active:before {
-    color: #f58500;
-}
-.button-3d:active {
-    top: 0;
-}
-.button-3d:active:after {
-    left: 60px;
-}
-/* Button 3e */
-.button-3e {
-    padding: 25px 120px 25px 60px;
-    overflow: hidden;
-}
-.button-3e>.fa {
-    left: auto;
-    right: 10px;
-    z-index: 2;
-}
-.button-3e:after {
-    width: 30%;
-    height: 200%;
-    background: rgba(255, 255, 255, 0.1);
-    z-index: 1;
-    right: 0;
-    top: 0;
-    margin: -5px 0 0 -5px;
-    -webkit-transform-origin: 0 0;
-    -webkit-transform: rotate(-20deg);
-    -moz-transform-origin: 0 0;
-    -moz-transform: rotate(-20deg);
-    -ms-transform-origin: 0 0;
-    -ms-transform: rotate(-20deg);
-    transform-origin: 0 0;
-    transform: rotate(-20deg);
-}
-.button-3e:hover:after {
-    width: 35%;
-}
-.card{
-    overflow-x:scroll;
-}
+    .input-group.md-form.form-sm.form-2 input.purple-border {
+        border: 1px solid #9e9e9e;
+    }
+
+    .input-group.md-form.form-sm.form-2 input[type=text]:focus:not([readonly]).purple-border {
+        border: 1px solid #ba68c8;
+        box-shadow: none;
+    }
+
+    .form-2 .input-group-addon {
+        border: 1px solid #ba68c8;
+    }
+
+    .danger-text {
+        color: #ff3547;
+    }
+
+    .success-text {
+        color: #00C851;
+    }
+
+    .table-bordered.red-border,
+    .table-bordered.red-border th,
+    .table-bordered.red-border td {
+        border: 1px solid #ff3547 !important;
+    }
+
+    .table.table-bordered th {
+        text-align: center;
+    }
+
+    .bigcheckbox {
+        width: 25px;
+        height: 25px;
+    }
+
+    .arcinput {
+        background-color: transparent;
+        border: 0;
+    }
+
+    .container {
+        width: 100%;
+    }
+
+    .color-pattern-3 {
+        text-align: center;
+    }
+
+    /* General button style (reset) */
+    .button {
+        border: none;
+        font-family: inherit;
+        font-size: inherit;
+        color: inherit;
+        background: none;
+        cursor: pointer;
+        width: 350px;
+        padding: 25px 50px;
+        display: inline-block;
+        margin: 4px;
+        text-transform: uppercase;
+        letter-spacing: 1px;
+        font-weight: 700;
+        outline: none;
+        position: relative;
+        -webkit-transition: all 0.3s;
+        -moz-transition: all 0.3s;
+        transition: all 0.3s;
+    }
+
+    .button:after {
+        content: '';
+        position: absolute;
+        z-index: -1;
+        -webkit-transition: all 0.3s;
+        -moz-transition: all 0.3s;
+        transition: all 0.3s;
+    }
+
+    /* Button 3 */
+    .button-3 {
+        background: #fcad26;
+        color: #fff;
+    }
+
+    .button-3:hover {
+        background: #f29e0d;
+    }
+
+    .button-3:active {
+        background: #f58500;
+        top: 2px;
+    }
+
+    .button-3>.fa {
+        position: absolute;
+        height: 100%;
+        left: 0;
+        top: 0;
+        font-size: 140%;
+        width: 60px;
+    }
+
+    .button-3>.fa:before {
+        position: absolute;
+        width: 25px;
+        height: 25px;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        margin: auto;
+    }
+
+    /* Button 3a */
+    .button-3a {
+        padding: 25px 60px 25px 120px;
+    }
+
+    .button-3a>.fa {
+        background: rgba(0, 0, 0, 0.05);
+    }
+
+    /* Button 3b */
+    .button-3b {
+        padding: 25px 60px 25px 120px;
+        border-radius: 10px;
+    }
+
+    .button-3b>.fa {
+        border-right: 2px solid rgba(255, 255, 255, 0.75);
+    }
+
+    /* Button 3c */
+    .button-3c {
+        padding: 80px 20px 20px 20px;
+        border-radius: 10px;
+        box-shadow: 0 3px #da9622;
+    }
+
+    .button-3c>.fa:before {
+        position: static;
+    }
+
+    .button-3c:active {
+        box-shadow: 0 3px #dc7801;
+    }
+
+    .button-3c>.fa {
+        height: 60px;
+        width: 100%;
+        line-height: 60px;
+        background: #fff;
+        color: #f29e0d;
+        border-radius: 10px 10px 0 0;
+    }
+
+    .button-3c:active:before {
+        color: #f58500;
+    }
+
+    /* Button 3d */
+    .button-3d {
+        padding: 25px 60px 25px 120px;
+        border-radius: 10px;
+    }
+
+    .button-3d>.fa {
+        background: #fff;
+        color: #fcad26;
+        z-index: 2;
+        border-radius: 10px 0 0 10px;
+    }
+
+    .button-3d:after {
+        width: 20px;
+        height: 20px;
+        background: #fff;
+        z-index: 1;
+        left: 55px;
+        top: 50%;
+        margin: -10px 0 0 -10px;
+        -webkit-transform: rotate(45deg);
+        -moz-transform: rotate(45deg);
+        -ms-transform: rotate(45deg);
+        transform: rotate(45deg);
+    }
+
+    .button-3d:active:before {
+        color: #f58500;
+    }
+
+    .button-3d:active {
+        top: 0;
+    }
+
+    .button-3d:active:after {
+        left: 60px;
+    }
+
+    /* Button 3e */
+    .button-3e {
+        padding: 25px 120px 25px 60px;
+        overflow: hidden;
+    }
+
+    .button-3e>.fa {
+        left: auto;
+        right: 10px;
+        z-index: 2;
+    }
+
+    .button-3e:after {
+        width: 30%;
+        height: 200%;
+        background: rgba(255, 255, 255, 0.1);
+        z-index: 1;
+        right: 0;
+        top: 0;
+        margin: -5px 0 0 -5px;
+        -webkit-transform-origin: 0 0;
+        -webkit-transform: rotate(-20deg);
+        -moz-transform-origin: 0 0;
+        -moz-transform: rotate(-20deg);
+        -ms-transform-origin: 0 0;
+        -ms-transform: rotate(-20deg);
+        transform-origin: 0 0;
+        transform: rotate(-20deg);
+    }
+
+    .button-3e:hover:after {
+        width: 35%;
+    }
+
+    .card {
+        overflow-x: scroll;
+    }
 </style>
 {% endblock %}
 {% block main-content %}
-    <main>
-        <div class="mt-5">
+<main>
+    <div class="mt-5">
         {% if messages %}
-    {% for k in messages%}
-    <div class="alert alert-{{k.tags}} alert-dismissible fade show" role="alert">
-        <b>{{ k }} !</b>
-        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-        </button>
-    </div>
-    {% endfor %}
-    {% endif %}
-            <div class="card mb-4">
-                <!-- Grid row -->
-                <div class="card-header">
+        {% for k in messages%}
+        <div class="alert alert-{{k.tags}} alert-dismissible fade show" role="alert">
+            <b>{{ k }} !</b>
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
+        {% endfor %}
+        {% endif %}
+        <div class="card mb-4">
+            <!-- Grid row -->
+            <div class="card-header">
                 <div class="row">
                     <!-- Grid column -->
                     <div class="col-md-12">
@@ -237,74 +276,73 @@
                     <!-- Grid column -->
                 </div>
             </div>
-            {% if tutor %}
-                <div class="card-body">
-                    <!-- Grid row -->
-                    <form action="" method="post">{% csrf_token %}
-                        <!--Table-->
-                        <div class="table-responsive">
+            {% if size %}
+            <div class="card-body">
+                <!-- Grid row -->
+                <form action="" method="post">{% csrf_token %}
+                    <!--Table-->
+                    <div class="table-responsive">
                         <table class="table table-striped" style="font-size:small;">
                             <!--Table head-->
-                                <tr>
-                                    <th>Tutor Name</th>
-                                    <th>Email Id</th>
-                                    <th>Password</th>
-                                    <th>Phone Number</th>
-                                    <th>Course Taught</th>
-                                    <th>Class</th>
-                                    <th>Availability</th>
-                                    <th>Teaching Type</th>
-                                    <th>Delete</th>
-                                    <th>Remove</th>
-                                </tr>
+                            <tr>
+                                <th>#</th>
+                                <th>Tutor Name</th>
+                                <th>Email Id</th>
+                                <th>Password</th>
+                                <th>Phone Number</th>
+                                <th>Course Taught</th>
+                                <th>Class</th>
+                                <th>Availability</th>
+                                <th>Teaching Type</th>
+                                <th class="text-center">Delete</th>
+                                <th class="text-center">Remove</th>
+                            </tr>
                             <!--Table head-->
                             <!--Table body-->
-                                {% for i in tutor reversed %}
-                                    <tr>
-                                        <td>{{i.teacher.user.username}}</td>
-                                        <td>{{i.teacher.user.email}}</td>
-                                        <td>{{i.teacher.user.password}}</td>
-                                        <td>{{i.teacher.phone}}</td>
-                                        <td>{{i.courseName|linebreaksbr}}</td>
-                                        <td>{{i.forclass|linebreaksbr}}</td>
-                                        {% if i.availability == 1 %}
-                                            <td>Weekly</td>
-                                        {% elif i.availability == 2 %}
-                                            <td>Weekend</td>
-                                        {% elif i.availability == 3 %}
-                                            <td>Both</td>
-                                        {% else %}
-                                            <td>None</td>
-                                        {% endif %}
-                                        <td>{{i.teachType}}</td>
-                                        <td>
-                                            <a href="{% url 'deleteTutor' i.id %}" class="btn btn-danger btn-sm">DELETE</a>
-                                        </td>
-                                        <td>
-                                            <input type="checkbox" class="bigcheckbox" name="check" value="{{i.id}}">
-                                        </td>
+                            {% for tutor,courses,forclass,teachType,availability in tutors reversed %}
+                            <tr>
+                                <td>{{forloop.counter}}</td>
+                                <td>{{tutor.user.username}}</td>
+                                <td>{{tutor.user.email}}</td>
+                                <td>{% if tutor.user.password == tutor.phone %}
+                                    {{tutor.user.password}}
+                                    {% else %}
+                                    ********
+                                    {% endif %}</td>
+                                <td>{{tutor.phone}}</td>
+                                <td>{{courses}}</td>
+                                <td>{{forclass}}</td>
+                                <td>{{availability}}</td>
+                                <td>{{teachType}}</td>
+                                <td class="text-center">
+                                    <a href="{% url 'deleteTutor' tutor.id %}" class="btn btn-danger"><i
+                                        class="flaticon-pencil-line" style="font-size:medium;"></i></a>
+                                </td>
+                                <td class="text-center">
+                                    <input type="checkbox" class="bigcheckbox" name="check" value="{{tutor.id}}">
+                                </td>
 
-                                    </tr>
-                                {% endfor %}
+                            </tr>
+                            {% endfor %}
                             <!--Table body-->
                         </table>
                     </div>
-                        <!--Table-->
-                        <div class="form-group">
-                            <input type="submit" value="Remove from Archive" class="btn btn-danger float-right">
-                        </div>
-                        <br>
-                    </form>
-                </div>
-                {% else %}
-                    <div class="card-header" style="background: none;">
-                        <div class="row">
-                            <div class="col-xl-12 col-md-12 col-12">
-                                <h2>No Tutors to show</h2>
-                            </div>
-                        </div>
+                    <!--Table-->
+                    <div class="form-group">
+                        <input type="submit" value="Remove from Archive" class="btn btn-danger float-right">
                     </div>
-                {% endif %}
+                    <br>
+                </form>
             </div>
-    </main>
-    {% endblock %}
+            {% else %}
+            <div class="card-header" style="background: none;">
+                <div class="row">
+                    <div class="col-xl-12 col-md-12 col-12">
+                        <h2>No Tutors to show</h2>
+                    </div>
+                </div>
+            </div>
+            {% endif %}
+        </div>
+</main>
+{% endblock %}
