--- a/templates/teacher/searchUserTutor.html
+++ b/templates/teacher/searchUserTutor.html
@@ -59,26 +59,26 @@
                                     <table class="table table-striped">
                                         <!--Table head-->
                                             <tr>
+                                                <th>#</th>
                                                 <th>Username</th>
                                                 <th>First Name</th>
                                                 <th>Last Name</th>
                                                 <th>Email Address</th>
-                                                <th>Pin Code</th>
+                                                <th>Address</th>
                                                 <th>Phone Number</th>
-                                                <th>School Name</th>
                                                 <th class="text-center">Add</th>
                                             </tr>
                                         <!--Table head-->
                                         <!--Table body-->
                                         {% for i in sr %}
                                                 <tr>
+                                                    <td>{{forloop.counter}}</td>
                                                     <td>{{i.user.username}}</td>
                                                     <td>{{i.user.first_name}}</td>
                                                     <td>{{i.user.last_name}}</td>
                                                     <td>{{i.user.email}}</td>
-                                                    <td>{{i.pincode}}</td>
+                                                    <td>{{i.address}}</td>
                                                     <td>{{i.phone}}</td>
-                                                    <td>{{i.schoolName}}</td>
                                                     <td class="text-center">
                                                         <a href="{% url 'AddalreadyExistsTutor' i.id %}" class="btn btn-danger">Add</a>
                                                     </td>
