--- a/templates/teacher/viewAssignmentTutor.html
+++ b/templates/teacher/viewAssignmentTutor.html
@@ -11,7 +11,7 @@
 {% endblock extra-stylesheets %}
 {% block main-content %}
 <div class="mt-5 row">
-  <div class="col-lg-12">
+  <div class="col-lg-12 mb-4">
     <div class="card statbox widget box box-shadow">
       <div class="card-header border-bottom border-default">
         <div class="row">
@@ -28,30 +28,40 @@
               <div class="col-lg-5 col-md-6 col-12 mt-2 row">
                 <label class="control-label col-sm-3 col-5 mt-3" style="display: block; color:black;">Location</label>
                 <input type="text" class="form-control my-2 w-100 col-sm-8 col-7" id="pac-input" name='loc'
-                  placeholder="Enter Location" required value="{{prefill.address}}">
+                  placeholder="Enter Location" {% if prefill.address %} value="{{prefill.address}}" {% endif %} >
                 <input type="hidden" id="cityLat" value="0" name="cityLat" />
                 <input type="hidden" id="cityLng" value="0" name="cityLng" />
               </div>
               <div class="col-lg-5 col-md-6 col-12 mt-2 row">
                 <label class="control-label col-sm-3 col-5 mt-3" style="display: block; color:black;">Budget</label>
                 <input type="number" class="form-control my-2 w-100 col-sm-8 col-7"
-                  style="-moz-appearance: textfield;" min="0" name="budget" value="{{prefill.budget}}"
-                  placeholder="Budget">
+                  style="-moz-appearance: textfield;" min="0" name="budget"
+                  placeholder="Budget" {% if prefill.budgetVal %} value="{{prefill.budgetVal}}" {% endif %} >
               </div>
-              <div class="col-lg-5 col-md-6  col-12 mt-2 row">
+              <div class="col-lg-5 col-md-6 col-12 mt-2 row">
                 <label class="control-label col-sm-3 col-5 mt-3" style="display: block; color:black;">Class</label>
-                <select id="className" name="className" class="custom-select form-control w-100 col-sm-8 col-7"
-                  onchange="subjects()">
+                <select name="className" class="cn custom-select form-control w-100 col-sm-8 col-7"
+                  onchange="selectclass(this)">
+                  {% if prefill.class %}
+                  <option selected value="{{prefill.class}}">{{prefill.class}}</option>
+                  {% else %}
+                  <option disabled selected value="">Select Class</option>
+                  {% endif %}
+
+                  {% for class in classes %}
+                  {% if prefill.class != class %}
+                  <option value="{{class}}">{{class}}</option>
+                  {% endif %}
+                  {% endfor %}
                 </select>
               </div>
               <div class="col-lg-5 col-md-6  col-12 mt-2 row">
-                <label class="control-label col-sm-3 mt-3 col-5" style="display: block; color:black;">Subject</label>
-                <select id="subject" name="subject" class="custom-select form-control w-100 col-sm-8 col-7"
-                  placeholder="Subject">
-                  {% if prefill.subject %}
-                  <option disabled selected value="{{prefill.subject}}">{{prefill.subject}}</option>
+                <label class="control-label col-sm-3 mt-3 col-5" style="display: block; color:black;">Course</label>
+                <select name="subject" class="ctn custom-select form-control w-100 col-sm-8 col-7">
+                  {% if prefill.course %}
+                  <option selected value="{{prefill.course}}">{{prefill.course}}</option>
                   {% else %}
-                  <option disabled selected value="">Subject</option>
+                  <option disabled selected value="">Select Course</option>
                   {% endif %}
                 </select>
               </div>
@@ -65,71 +75,91 @@
     </div>
   </div>
 </div>
+
 {% if allData %}
-<div class="widget-content widget-content-area mt-4">
-  <div class="table-responsive">
-    <table id="htmlgrid" class="testgrid table table-striped table-bordered table-hover mb-4">
-      <tr>
-        <th>#</th>
-        <th>Student</th>
-        <th>Course</th>
-        <th>Class</th>
-        <th>Requirement</th>
-        <th>Phone</th>
-        <th>Created</th>
-        <th>Budget</th>
-        <th class="text-center">View</th>
-      </tr>
-      {% for assing in allData reversed %}
-      <tr>
-        <td>{{forloop.counter}}</td>
-        <td>{{assing.student.user.first_name}} {{assing.student.user.last_name}}</td>
-        <td>{{assing.courseName}}</td>
-        <td>{{assing.forclass}}</td>
-        <td>{{assing.requirement}}</td>
-        <td>{{assing.student.phone}}</td>
-        <td>{{assing.timestamp|naturaltime}}</td>
-        <td>{{assing.budget}}</td>
-        <td class="text-center">
-          <a href="{{assing.descriptionFile.url}}" class="btn btn-info" target="_blank">View</a>
-        </td>
-      </tr>
-      {% endfor %}
-    </table>
+<div class="row">
+{% for assing in allData reversed %}
+<div class="col-xl-3 col-lg-6 col-md-6 col-sm-6 layout-spacing">
+  <div class="statbox widget box box-shadow">
+      <div class="widget-content widget-content-area product-cat6  px-0 py-0">
+          <div class="row">
+              <div class="col-12">
+                  <div class="card">
+                      <div class="wrapper">
+                          <div class="row">
+                              <div class="col-md-12 mt-1 text-center">
+                                  <b
+                                      style="text-transform: uppercase; color: black;">{% if assing.studen.user.first_name %}{{assing.student.user.first_name}} {{assing.student.user.last_name}} {% else %} {{assing.student.user.username}} {% endif %}</b>
+                              </div>
+                              <div class="col-md-12 mt-1 text-center" style="color: black;">
+                                  <div class="row">
+                                      <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
+                                          <b>Class:</b>
+                                          <span class="t-s-car-sold-number mb-0 ml-1">{{assing.forclass}}</span>
+                                      </div>
+                                      <div class="col-xl-12 mt-2 col-lg-12 col-md-12 col-sm-12 col-12">
+                                          <b>Course:</b>
+                                          <span class="t-s-car-sold-number mb-0 ml-1">{{assing.courseName}}</span>
+                                      </div>
+                                      <div class="col-xl-12 mt-2 col-lg-12 col-md-12 col-sm-12 col-12">
+                                        <b>Created:</b>
+                                        <span class="t-s-car-sold-number mb-0 ml-1">{{assing.timestamp|date:'F d,Y'}}</span>
+                                    </div>
+                                    <div class="col-xl-12 mt-2 col-lg-12 col-md-12 col-sm-12 col-12">
+                                      <b>Budget:</b>
+                                      <span class="t-s-car-sold-number mb-0 ml-1">{{assing.budget}}</span>
+                                  </div>
+                                  </div>
+                              </div>
+                              <div class="col-xl-12 text-center mt-2 mb-2 card-bottom-section">
+                                  <a href="{{assing.descriptionFile.url}}" class="btn btn-info" target="_blank" class="btn btn-primary">View</a>
+                                  <a class="btn btn-success" href='{% url "room" request.user.username "Teacher" assing.student.user.username %}'>Chat</a>
+                              </div>
+                          </div>
+                      </div>
+                  </div>
+              </div>
+          </div>
+      </div>
   </div>
 </div>
+{% endfor %}
+{% else %}
+    <div class="card w-100 mx-3">
+        <h5 class="mt-2 mb-2 p-2">No Data Found</h5>
+    </div>
 {% endif %}
 </div>
 <script>
-  console.log("this is js")
-  var className = document.getElementById("className")
-  var jsondata = {{ jsonLocalData| safe}}
-  var prefillclass = "{{prefill.class}}"
-  const keys = Object.keys(jsondata);
+  $(document).ready(() => {
+        if (performance.navigation.type == 2) {
+            location.reload();
+        }
+    });
 
-  if (prefillclass) {
-    var classes = `<option disabled selected value="${prefillclass}">${prefillclass}</option>`
-  }
-  else {
-    var classes = `<option disabled selected value="">Class</option>`
-  }
-  for (let index = 0; index < keys.length; index++) {
-    const element = keys[index];
-    classes += `<option value="${element}">${element}</option>`
-  }
-  className.innerHTML = classes
+    function selectclass(el) {
+        var data = {{ data| safe }};
+        courses = data[el.value];
 
-  function subjects() {
-    var className = document.getElementById("className").value
-    var subject = document.getElementById("subject")
-    var html=''
-    class_subjects = jsondata[`${className}`]
-    for (let index = 0; index < class_subjects.length; index++) {
-      const element = class_subjects[index];
-      html += `<option value="${element}">${element}</option>`
+        $(".ctn").empty().trigger("change");
+        var newOption = new Option(
+            "Select Course",
+            "",
+            false,
+            false
+        );
+        $(".ctn").append(newOption).trigger("change");
+
+        for (i = 0; i < courses.length; i++) {
+            var newOption = new Option(
+                courses[i],
+                courses[i],
+                false,
+                false
+            );
+            $(".ctn").append(newOption).trigger("change");
+        }
     }
-    subject.innerHTML = html
-  }
 </script>
 <script type="text/javascript">
   $("#pac-input").on("input", function () {
