--- a/templates/teacher/viewTutors.html
+++ b/templates/teacher/viewTutors.html
@@ -240,16 +240,17 @@ width: 35%;
                   </div>
                 <!-- Grid column -->
             </div>
-            {% if tutors %}
+            {% if size %}
             <div class="card-body">
                 <!-- Grid row -->
                 <!-- Grid row -->
                 <form action="" method="post">{% csrf_token %}
                     <!--Table-->
                     <div class="table-responsive">
-                        <table class="table table-striped">
+                        <table class="table table-striped" style="font-size:small;">
                             <!--Table head-->
                                 <tr>
+                                    <th>#</th>
                                     <th>Tutor Name</th>
                                     <th>Email Id</th>
                                     <th>Password</th>
@@ -264,30 +265,29 @@ width: 35%;
                                 </tr>
                             <!--Table head-->
                             <!--Table body-->
-                                {% for tutor,course in tutors reversed %}
+                                {% for tutor,courses,forclass,teachType,availability in tutors reversed %}
                                 <tr class="main-row">
-                                    <td>{{tutor.teacher.user.username}}</td>
-                                    <td>{{tutor.teacher.user.email}}</td>
-                                    <td>{{tutor.teacher.user.password}}</td>
-                                    <td>{{tutor.teacher.phone}}</td>
-                                    <td>{{course}}</td>
-                                    <td>{{tutor.forclass}}</td>
-                                    {% if tutor.availability == 1 %}
-                                    <td>Weekly</td>
-                                    {% elif tutor.availability == 2 %}
-                                    <td>Weekend</td>
-                                    {% elif tutor.availability == 3 %}
-                                    <td>Both</td>
-                                    {% else %}
-                                    <td>None</td>
-                                    {% endif %}
-                                    <td>{{tutor.teachType}}</td>
+                                    <td>{{forloop.counter}}</td>
+                                    <td>{{tutor.user.username}}</td>
+                                    <td>{{tutor.user.email}}</td>
+                                    <td>{% if tutor.user.password == tutor.phone %}
+                                            {{tutor.user.password}}
+                                        {% else %}
+                                            ********
+                                        {% endif %}</td>
+                                    <td>{{tutor.phone}}</td>
+                                    <td>{{courses}}</td>
+                                    <td>{{forclass}}</td>
+                                    <td>{{availability}}</td>
+                                    <td>{{teachType}}</td>
                                     <td class="text-center">
                                         <a href="{% url 'deleteTutor' tutor.id %}"
-                                            class="btn btn-danger btn-sm">DELETE</a>
+                                            class="btn btn-danger"><i
+                                            class="flaticon-delete-fill" style="font-size:medium;"></i></a>
                                     </td>
                                     <td class="text-center">
-                                        <a href="{% url 'editTutor' tutor.id %}" class="btn btn-danger btn-sm">EDIT</a>
+                                        <a href="{% url 'editTutor' tutor.id %}" class="btn btn-warning"><i
+                                            class="flaticon-pencil-line" style="font-size:medium;"></i></a>
                                     </td>
 
                                     <td class="text-center">
