--- a/templates/tutorials/AddTutorCourseVideos.html
+++ b/templates/tutorials/AddTutorCourseVideos.html
@@ -16,9 +16,9 @@
                     <div id='entry1' class="table-responsive">
                         <table id="htmlgrid" class="testgrid table table-striped table-bordered table-hover mb-4" style="color:black;">
                             <thead>
-                                <th style="color:black;">Add Video*</th>
-                                <th style="color:black;">Video Title*</th>
-                                <th style="color:black;">Video Description</th>
+                                <th style="color:black;">Add Video<span class="text-danger">*</span></th>
+                                <th style="color:black;">Video Title<span class="text-danger">*</span></th>
+                                <th style="color:black;">Video Description<span class="text-danger">*</span></th>
                                 <th></th>
                             </thead>
                             <tbody>
@@ -26,7 +26,7 @@
                                 <td>
                                     <div class="file-box w-100 col-12" style="min-width: 205px;">
                                     <input type="file" class="my-table-input custom-file-input" id="file" name="video" onchange="addfile(this)" required>
-                                    <label class="custom-file-label" for="validatedCustomFile">Choose file...</label>
+                                    <label class="custom-file-label" for="validatedCustomFile" style="overflow: hidden;">Choose file...</label>
                                 </div>
                                 </td>
                                 <td>
@@ -36,7 +36,7 @@
                                     <textarea style="min-width: 205px;" type="text" rows="1" class="my-table-input form-control" id="exampleInputEmail1" name="description" aria-describedby="emailHelp" placeholder="Enter Video Description" required></textarea>
                                 </td>
                                 <td>
-                                    <a id='add' class="btn btn-warning">Add Video</a>
+                                    <a id='add' class="btn btn-success">Add Video</a>
                                 </td>
                             </tr>
                             </tbody>
@@ -45,7 +45,7 @@
                 </div>
                 <hr>
                 <div class="col-sm-12 col-12 d-flex justify-content-end">
-                    <button name="submit" type="submit" class="btn btn-info">Add Videos</button>
+                    <button name="submit" type="submit" class="btn btn-info">Submit</button>
                 </div>
             </form>
         </div>
@@ -65,13 +65,18 @@
         $("#add").click(function(){
             var AddVideo = "<tr>"
             AddVideo += `<td><div style="min-width: 205px;" class="file-box w-100 col-12"><input type="file" class="my-table-input custom-file-input" id="file" name="video" required><label class="custom-file-label" >Choose file...</label></div></td>`
-            AddVideo += `<td><input style="min-width: 205px;" type='text' name='title' class='my-table-input form-control' onchange="addfile(this)" id='exampleInputEmail1' aria-describedby='emailHelp' placeholder='Enter Video Title'></td>`
-            AddVideo += `<td><textarea style="min-width: 205px;" type='text' rows='1' name='description' class='my-table-input form-control' id='exampleInputEmail1' aria-describedby='emailHelp' placeholder='Enter Video Description'></textarea></td>`
+            AddVideo += `<td><input style="min-width: 205px;" type='text' name='title' class='my-table-input form-control' onchange="addfile(this)" id='exampleInputEmail1' aria-describedby='emailHelp' placeholder='Enter Video Title' required></td>`
+            AddVideo += `<td><textarea style="min-width: 205px;" type='text' rows='1' name='description' class='my-table-input form-control' id='exampleInputEmail1' aria-describedby='emailHelp' placeholder='Enter Video Description' required></textarea></td>`
+            AddVideo += `<td><a id='rem' onclick="removeVid(this)" class="btn btn-success">Remove</a></td>`
             AddVideo +=  `</tr>`;
                     $("table tbody").append(AddVideo);
             addwidth();
         });
     })
+
+    function removeVid(el) {
+        $(el).closest('tr').remove();
+    }
 
     function addfile(el) {
         var file = $(el).val();
@@ -86,5 +91,11 @@
             $(el).closest(".file-box").find(".custom-file-label").html(filename);
         }
     }
+
+    $(document).on('ready', () => {
+        if (performance.navigation.type == 2) {
+            location.reload();
+        }
+    });
 </script>
 {% endblock main-content %}
