--- a/templates/tutorials/addTutorialsInstitute.html
+++ b/templates/tutorials/addTutorialsInstitute.html
@@ -287,37 +287,9 @@ width:max-content;
                 <br>
                 <div class="row">
                     <div class="col-md-6 col-lg-4 col-12 input-group form-group">
-                        <label class="control-label col-sm-5 col-5 mt-2" style="color:black;">Course Title<span
+                        <label class="control-label col-sm-5 col-5 mt-2" style="color:black;">Class<span
                                 class="text-danger">*</span></label>
-                        <input type="text" class="form-control" id="firstName " name='title' placeholder="Course Title"
-                            required="">
-                    </div>
-
-                    <div class="col-md-6 col-lg-4 col-12 input-group form-group">
-                        <label class="control-label col-sm-5 col-5 mt-2" style="color:black;">Course Fess<span
-                                class="text-danger">*</span></label>
-                        <input type="number" class="form-control" id="firstName " name='fees' placeholder="Course Fees"
-                            required="">
-                    </div>
-
-                    <div class="col-md-6 col-lg-4 col-12 input-group form-group">
-                        <label class="control-label col-sm-5 col-5 mt-2" style="color:black;">Course Duration<span
-                                class="text-danger">*</span></label>
-                        <select id="no_of_installment" class="custom-select form-control" name='duration' required>
-                            <option disabled selected value="">In Months</option>
-                            <option value="1">1</option>
-                            <option value="2">2</option>
-                            <option value="3">3</option>
-                            <option value="4">4</option>
-                            <option value="5">5</option>
-                            <option value="6">6</option>
-                        </select>
-                    </div>
-
-                    <div class="col-md-6 col-lg-4 col-12 input-group form-group">
-                        <label class="control-label col-sm-5 col-5 mt-2" style="color:black;">Select Class<span
-                                class="text-danger">*</span></label>
-
+        
                         <select class="cn custom-select form-control" name="forclass" required
                             onchange="selectclass(this)">
                             <option disabled selected value="">Select an option</option>
@@ -326,20 +298,40 @@ width:max-content;
                             {% endfor %}
                         </select>
                     </div>
-
+        
                     <div class="col-md-6 col-lg-4 col-12 input-group form-group">
-                        <label class="control-label col-sm-5 col-5 mt-2" style="color:black;">Select Course<span
+                        <label class="control-label col-sm-5 col-5 mt-2" style="color:black;">Course<span
                                 class="text-danger">*</span></label>
-
+        
                         <select class="ctn custom-select form-control" name="course" required>
                             <option disabled selected value="">Select an option</option>
                         </select>
                     </div>
+                    <div class="col-md-6 col-lg-4 col-12 input-group form-group">
+                        <label class="control-label col-sm-5 col-5 mt-2" style="color:black;">Course Title<span
+                                class="text-danger">*</span></label>
+                        <input type="text" class="form-control" name='title' placeholder="Course Title"
+                            required="">
+                    </div>
+
+                    <div class="col-md-6 col-lg-4 col-12 input-group form-group">
+                        <label class="control-label col-sm-5 col-5 mt-2" style="color:black;">Course Fees<span
+                            class="text-danger">*</span></label>
+                            <input type="number" min="0" id="cfees" class="form-control" name='fees' placeholder="Course Fees"
+                            required="">
+                        </div>
+
+                    <div class="col-md-6 col-lg-4 col-12 input-group form-group">
+                        <label class="control-label col-sm-5 col-5 mt-2" style="color:black;">Course Duration<span
+                                class="text-danger">*</span></label>
+                        <input type="number" min="0" class="form-control" name='duration' placeholder="In Months" required>
+                    </div>
+
 
                     <div class="col-md-6 col-lg-4 col-12 input-group form-group">
                         <label class="control-label col-sm-5 col-5 mt-2" style="color:black;">Discount Type</label>
 
-                        <select class="custom-select form-control" name="unit">
+                        <select class="custom-select form-control" name="unit" id="unit">
                             <option selected value="0">In Percentage (%)</option>
                             <option value="1">In Rupees </option>
                         </select>
@@ -347,19 +339,29 @@ width:max-content;
 
                     <div class="col-md-6 col-lg-4 col-12 input-group form-group">
                         <label class="control-label col-sm-5 col-5 mt-2" style="color:black;">Discount</label>
-                        <input type="number" step="0.01" class="form-control" id="discount" name='feeDisc'
+                        <input type="number" min="0" max="100" step="0.01" class="form-control" id="discount" name='feeDisc'
                             placeholder="Discount">
                     </div>
 
                     <div class="col-md-6 col-lg-4 col-12 input-group form-group">
                         <label class="control-label col-sm-5 col-5 mt-2" style="color:black;">Validity</label>
-                        <input type="Date" class="form-control" id="validity" name='discValidity' placeholder="Val" required>
+                        <input type="Date" class="form-control" id="validity" name='discValidity' placeholder="Val" disabled>
+                    </div>
+
+                    <div class="col-md-6 col-lg-4 col-12 input-group form-group">
+                        <label class="control-label col-sm-5 col-5 mt-2" style="color:black;">Free for Enrolled</label>
+
+                        <select class="custom-select form-control" name="enr">
+                            <option selected value="0">No</option>
+                            <option value="1">Yes</option>
+                        </select>
                     </div>
 
                     <div class="col-md-12 col-lg-12 col-12 input-group form-group">
                         <textarea type="text" class="form-control my-2 w-100" name='description'
-                            placeholder="Course Description"></textarea>
+                            placeholder="Course Description" required></textarea>
                     </div>
+                    
 
                     <div class="col-lg-12 col-md-12 col-12 text-center">
                         <button id='submitBtn' name="submit" type="submit" class="btn btn-info">Add Tutorial</button>
@@ -464,6 +466,25 @@ width:max-content;
         });
     });
 
+    $('#discount').on('change',()=>{
+        if ($('#unit').val()==1){
+            if($('#cfees').val()){
+                $('#discount').prop('max',$('#cfees').val());
+            }
+        }
+
+        if ($('#discount').val()==0){
+            $('#validity').prop('disabled', true);
+            $('#validity').prop('required', false);
+            $('#validity').val(null);
+        }
+        
+        else{
+            $('#validity').prop('disabled', false);
+            $('#validity').prop('required', true);
+        }
+    })
+
     function selectclass(el) {
         var selected = el.value;
         $.ajax({
@@ -474,6 +495,14 @@ width:max-content;
             success: function (data) {
                 courses = data.courses;
                 $(".ctn").empty().trigger("change");
+                var newOption = new Option(
+                        "Select an option",
+                        "",
+                        false,
+                        false
+                    );
+                    $(".ctn").append(newOption).trigger("change");
+
                 for (i = 0; i < courses.length; i++) {
                     var newOption = new Option(
                         courses[i][1],
@@ -486,5 +515,10 @@ width:max-content;
             },
         });
     }
+    $(document).on('ready', () => {
+        if (performance.navigation.type == 2) {
+            location.reload();
+        }
+    });
 </script>
 {% endblock %}
