--- a/templates/tutorials/editTutorialTutor.html
+++ b/templates/tutorials/editTutorialTutor.html
@@ -26,51 +26,71 @@
             <div class="card-body">
                 <form id='submitForm' method='post' action='' enctype='multipart/form-data'>{% csrf_token %}
                     <div class="row">
-
-                        <div class="col-md-6 col-lg-4 col-12 input-group form-group">
-                            <label class="control-label col-sm-4 col-5 mt-2" style="color: black;">Title<span
-                                    class="text-danger">*</span></label>
-                            <input type="text" class="form-control w-100 col-sm-8 col-7" id="firstName " name='title'
-                                placeholder="Course Title" required value="{{tutorial.Title}}">
-                        </div>
-                        <div class="col-md-6 col-lg-4 col-12 input-group form-group">
-                            <label class="control-label col-sm-4 col-5 mt-2" style="color: black;">Time<span
-                                    class="text-danger">*</span></label>
-                            <select name="duration" class="custom-select form-control w-100 col-sm-8 col-7" required>
-                                <option disabled selected>{{tutorial.Duration}}</option>
-                                <option value="1">1</option>
-                                <option value="2">2</option>
-                                <option value="3">3</option>
-                                <option value="4">4</option>
-                                <option value="5">5</option>
-                                <option value="6">6</option>
-                            </select>
-                        </div>
-                        <div class="col-lg-4 col-12 col-md-6 input-group form-group">
-                            <label class="control-label col-sm-4 col-5 mt-2" style="color: black;">Fees<span
-                                    class="text-danger">*</span></label>
-                            <input type="number" step="0.01" style="-moz-appearance: textfield;" min="0"
-                                class="form-control w-100 col-sm-8 col-7" name="fees" placeholder="Course Fees" required
-                                value="{{tutorial.Fees}}">
-                        </div>
-                        <div class="col-md-6 col-lg-4 col-12 input-group form-group">
-                            <label class="control-label col-sm-4 col-5 mt-2" style="color: black;">Discount Type</label>
-                            <select name="unit" class="custom-select form-control w-100 col-sm-8 col-7" required>
-                                <option selected value="0">In Percentage (%)</option>
-                                <option value="1">In Rupees </option>
-                            </select>
-                        </div>
-                        <div class="col-lg-4 col-md-6 col-12 input-group form-group">
-                            <label class="control-label col-sm-4 col-5 mt-2" style="color: black;">Discount</label>
-                            <input type="number" step="0.01" style="-moz-appearance: textfield;" min="0"
-                                class="form-control w-100 col-sm-8 col-7" name="feeDisc"
-                                placeholder="(in %)Fees Discount" required value="{{tutorial.Discount}}">
-                        </div>
-                        <div class="col-lg-4 col-md-6 col-12 input-group form-group">
-                            <label class="control-label col-sm-4 col-5 mt-2" style="color: black;">Validity</label>
-                            <input type="date" class="form-control col-sm-8 col-7" name="discValidity"
-                                value="{{tutorial.Validity}}">
-                        </div>
+                            <div class="col-md-6 col-lg-4 col-12 input-group form-group">
+                                <label class="control-label col-sm-5 col-5 mt-2" style="color:black;">Class<span
+                                        class="text-danger">*</span></label>
+            
+                                <select class="cn custom-select form-control" name="forclass" required onchange="selectclass(this)">
+                                    <option selected value="{{tutorial.forclass}}">{{tutorial.forclass}}</option>
+                                    {% for x in classes %}
+                                    {% if x != tutorial.forclass %}
+                                    <option value="{{ x }}">{{ x }}</option>
+                                    {% endif %}
+                                    {% endfor %}
+                                </select>
+                            </div>
+            
+                            <div class="col-md-6 col-lg-4 col-12 input-group form-group">
+                                <label class="control-label col-sm-5 col-5 mt-2" style="color:black;">Course<span
+                                        class="text-danger">*</span></label>
+            
+                                <select class="ctn custom-select form-control" name="course" required>
+                                    <option selected value="{{tutorial.Course}}">{{tutorial.Course}}</option>
+                                </select>
+                            </div>
+            
+                            <div class="col-md-6 col-lg-4 col-12 input-group form-group">
+                                <label class="control-label col-sm-5 col-5 mt-2" style="color:black;">Course Title<span
+                                        class="text-danger">*</span></label>
+                                <input type="text" class="form-control" id="firstName " name='title' placeholder="Course Title"
+                                    required="" value="{{tutorial.Title}}">
+                            </div>
+            
+                            <div class="col-md-6 col-lg-4 col-12 input-group form-group">
+                                <label class="control-label col-sm-5 col-5 mt-2" style="color:black;">Course Fees<span
+                                        class="text-danger">*</span></label>
+                                <input type="number" min="0" class="form-control" id="cfees" name='fees'
+                                    placeholder="Course Fees" required="" value="{{tutorial.Fees}}">
+                            </div>
+            
+                            <div class="col-md-6 col-lg-4 col-12 input-group form-group">
+                                <label class="control-label col-sm-5 col-5 mt-2" style="color:black;">Course Duration<span
+                                        class="text-danger">*</span></label>
+                                <input type="number" min="0" id="no_of_installment" class="form-control" name='duration' required
+                                    placeholder="In Months" value="{{tutorial.Duration}}">
+                            </div>
+            
+            
+                            <div class="col-md-6 col-lg-4 col-12 input-group form-group">
+                                <label class="control-label col-sm-5 col-5 mt-2" style="color:black;">Discount Type</label>
+            
+                                <select class="custom-select form-control" name="unit" id="unit">
+                                    <option selected value="0">In Percentage (%)</option>
+                                    <option value="1">In Rupees </option>
+                                </select>
+                            </div>
+            
+                            <div class="col-md-6 col-lg-4 col-12 input-group form-group">
+                                <label class="control-label col-sm-5 col-5 mt-2" style="color:black;">Discount</label>
+                                <input type="number" min="0" max="100" step="0.01" class="form-control" id="discount" name='feeDisc'
+                                    placeholder="Discount" value="{{tutorial.Discount}}">
+                            </div>
+            
+                            <div class="col-md-6 col-lg-4 col-12 input-group form-group">
+                                <label class="control-label col-sm-5 col-5 mt-2" style="color:black;">Validity</label>
+                                <input type="Date" class="form-control" id="validity" name='discValidity' placeholder="Val"
+                                    value="{{tutorial.Validity|date:'Y-m-d'}}" disabled>
+                            </div>
 
                         <div class="col-md-12 col-lg-12 col-12 input-group form-group">
                             <textarea class="form-control my-2 w-100" name='description'
@@ -85,4 +105,63 @@
         </div>
     </div>
 </div>
+<script>
+
+$(document).ready(function () {
+    if ($('#discount').val()==0){
+            $('#validity').prop('disabled', true);
+            $('#validity').prop('required', false);
+            $('#validity').val(null);
+        }
+        
+        else{
+            $('#validity').prop('disabled', false);
+            $('#validity').prop('required', true);
+        }
+    });
+
+$('#discount').on('change',()=>{
+        if ($('#unit').val()==1){
+            if($('#cfees').val()){
+                $('#discount').prop('max',$('#cfees').val());
+            }
+        }
+
+        if ($('#discount').val()==0){
+            $('#validity').prop('disabled', true);
+            $('#validity').prop('required', false);
+            $('#validity').val(null);
+        }
+        
+        else{
+            $('#validity').prop('disabled', false);
+            $('#validity').prop('required', true);
+        }
+    })
+
+function selectclass(el) {
+    var data = {{ data| safe }};
+    courses = data[el.value];
+
+    $(".ctn").empty().trigger("change");
+    var newOption = new Option(
+        "Select an option",
+        "",
+        false,
+        false
+    );
+    $(".ctn").append(newOption).trigger("change");
+
+    for (i = 0; i < courses.length; i++) {
+        var newOption = new Option(
+            courses[i],
+            courses[i],
+            false,
+            false
+        );
+        $(".ctn").append(newOption).trigger("change");
+    }
+}
+
+</script>
 {% endblock main-content %}
