--- a/templates/tutorials/viewTutorials.html
+++ b/templates/tutorials/viewTutorials.html
@@ -280,7 +280,7 @@
                     <!-- Grid column -->
                 </div>
                 </div>
-                {% if tutorials %}
+                {% if size %}
                 <div class="card-body">
                 <!-- Grid row -->
                 <form action="" method="post">{% csrf_token %}
@@ -288,35 +288,35 @@
                     <table class="table table-striped">
                         <!--Table head-->
                             <tr>
+                                <th>#</th>
                                 <th>Course Title</th>
-                                <th>Course Description</th>
                                 <th>Class</th>
-                                <th>Category</th>
+                                <th>Course</th>
                                 <th>Course Duration</th>
                                 <th>Course Fees</th>
                                 <th>Course Discount</th>
+                                <th>Last Updated</th>
                                 <th class="text-center">Action</th>
                                 <th class="text-center">Archive</th>
                             </tr>
                         <!--Table head-->
                         <!--Table body-->
-                            {% for i in tutorials %}
+                            {% for i,date in tutorials %}
                             <tr class="main-row">
+                                <td>{{forloop.counter}}</td>
                                 <td>
-                                    <p style="color: black;font-size: 14px;">{{i.Title}}</p>
-                                </td>
-                                <td>
-                                    <p style="color: black;font-size: 14px;">{{i.Description}}</p>
+                                    {{i.Title}}
                                 </td>
                                 <td>{{i.forclass}}</td>
                                 <td>{{i.Course.courseName}}</td>
                                 <td>{{i.Duration}}</td>
-                                <td>{{i.Fees}}</td>
+                                <td>{% if i.Fees %} {{i.Fees}} {% else %} Free {% endif %}</td>
                                 {% if i.Discount_Validity %}
                                 <td>{{i.Discounted_price }} <del>{{i.Fees}}</del></td>
                                 {% else %}
                                 <td>Not Available</td>
                                 {% endif %}
+                                <td>{{date|date:'F d,Y'}}</td>
                                 <td class="d-flex justify-content-center">
                                     <a class="btn btn-info mx-2" href="{% url 'viewtutorial' i.id %}"><i
                                             class="flaticon-view" style="font-size:medium;"></i></a>
@@ -325,7 +325,7 @@
                                     <a class="btn btn-danger mx-2" href="{% url 'deletetutorial' i.id %}"><i
                                             class="flaticon-delete-fill" style="font-size:medium;"></i></a>
                                 </td>
-                                <td>
+                                <td class="text-center">
                                     <input type="checkbox" class="bigcheckbox" name="ids" value="{{i.id}}">
                                 </td>
                             </tr>
