--- a/templates/tutorials/watchTutorialTutor.html
+++ b/templates/tutorials/watchTutorialTutor.html
@@ -40,6 +40,7 @@
               </div>
               {% endfor %}
             </div>
+            <a class="btn btn-success mt-2 w-100" href="{% url 'addvideosTutor' tutorial.id %}">Add More Videos</a>
           </div>
           <div class="col-lg-12 col-md-12 card col-12 mt-2" style="border: none;">
             <h2 class="text-dark">Course Content</h2>
@@ -53,6 +54,7 @@
         <div class="card-body">
           <h4>Something went wrong</h4>
         </div>
+        <a class="btn btn-success m-2 w-90" href="{% url 'addvideosTutor' tutorial.id %}">Add More Videos</a>
       </div>
       {% endif %}
     </div>
